@@ -1,19 +1,28 @@
-// Copyright 2000-2018 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.compiler;
 
+import com.intellij.compiler.backwardRefs.CompilerReferenceServiceBase;
 import com.intellij.compiler.server.BuildProcessParametersProvider;
+import com.intellij.openapi.project.Project;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.jps.backwardRefs.JavaBackwardReferenceIndexWriter;
 
 import java.util.Collections;
 import java.util.List;
 
-public class CompilerReferenceIndexBuildParametersProvider extends BuildProcessParametersProvider {
-  @NotNull
+import static com.intellij.compiler.backwardRefs.CompilerReferenceServiceBase.isCaseSensitiveFS;
+
+final class CompilerReferenceIndexBuildParametersProvider extends BuildProcessParametersProvider {
+  private final @NotNull Project project;
+
+  CompilerReferenceIndexBuildParametersProvider(@NotNull Project project) { this.project = project; }
+
   @Override
-  public List<String> getVMArguments() {
-    return CompilerReferenceService.isEnabled()
-           ? Collections.singletonList("-D" + JavaBackwardReferenceIndexWriter.PROP_KEY + "=true")
-           : Collections.emptyList();
+  public @NotNull List<String> getVMArguments() {
+    boolean enabled = CompilerReferenceServiceBase.isEnabled();
+    if (!enabled) return Collections.emptyList();
+    boolean caseSensitiveFS = isCaseSensitiveFS(project);
+    return List.of("-D" + JavaBackwardReferenceIndexWriter.PROP_KEY + "=true",
+                   "-D" + JavaBackwardReferenceIndexWriter.FS_KEY + "=" + Boolean.valueOf(caseSensitiveFS));
   }
 }
