@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.execution.junit;
 
 import com.intellij.execution.ExecutionBundle;
@@ -7,7 +7,7 @@ import com.intellij.execution.actions.ConfigurationContext;
 import com.intellij.execution.junit2.PsiMemberParameterizedLocation;
 import com.intellij.execution.junit2.info.MethodLocation;
 import com.intellij.ide.util.PsiClassListCellRenderer;
-import com.intellij.openapi.actionSystem.PlatformDataKeys;
+import com.intellij.openapi.actionSystem.PlatformCoreDataKeys;
 import com.intellij.openapi.application.ReadAction;
 import com.intellij.openapi.compiler.JavaCompilerBundle;
 import com.intellij.openapi.editor.Document;
@@ -16,17 +16,25 @@ import com.intellij.openapi.fileEditor.TextEditor;
 import com.intellij.openapi.progress.ProgressManager;
 import com.intellij.openapi.ui.popup.JBPopupFactory;
 import com.intellij.openapi.util.Condition;
-import com.intellij.psi.*;
+import com.intellij.psi.PsiClass;
+import com.intellij.psi.PsiClassOwner;
+import com.intellij.psi.PsiDocumentManager;
+import com.intellij.psi.PsiFile;
+import com.intellij.psi.PsiMethod;
+import com.intellij.psi.PsiModifier;
 import com.intellij.psi.search.searches.ClassInheritorsSearch;
 import com.intellij.psi.util.PsiClassUtil;
 import com.intellij.ui.ColoredListCellRenderer;
 import com.intellij.util.ArrayUtil;
 import com.intellij.util.ui.JBUI;
 
-import javax.swing.*;
+import javax.swing.JList;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
+import java.util.function.Consumer;
 
 import static com.intellij.util.PopupUtilsKt.getBestPopupPosition;
 
@@ -55,9 +63,9 @@ public class InheritorChooser {
                                           final Condition<? super PsiClass> acceptAbstractCondition) {
     if (containingClass != null && acceptAbstractCondition.value(containingClass)) {
       final Location location = context.getLocation();
-      if (location instanceof MethodLocation) {
-        final PsiClass aClass = ((MethodLocation)location).getContainingClass();
-        if (aClass != null && !aClass.hasModifierProperty(PsiModifier.ABSTRACT)) {
+      if (location instanceof MethodLocation loc) {
+        final PsiClass aClass = loc.getContainingClass();
+        if (!aClass.hasModifierProperty(PsiModifier.ABSTRACT)) {
           return false;
         }
       } else if (location instanceof PsiMemberParameterizedLocation) {
@@ -66,31 +74,25 @@ public class InheritorChooser {
 
       final List<PsiClass> classes = new ArrayList<>();
       if (!ProgressManager.getInstance().runProcessWithProgressSynchronously(() -> {
-        final boolean isJUnit5 = ReadAction.compute(() -> JUnitUtil.isJUnit5(containingClass));
-        ClassInheritorsSearch.search(containingClass).forEach(aClass -> {
-          if (isJUnit5 && JUnitUtil.isJUnit5TestClass(aClass, true) || PsiClassUtil.isRunnableClass(aClass, true, true)) {
-            classes.add(aClass);
-          }
-          return true;
-        });
+        collectClasses(containingClass, classes, new HashSet<>());
       }, ExecutionBundle.message("search.for.0.inheritors", containingClass.getQualifiedName()), true, containingClass.getProject())) {
         return true;
       }
 
       if (classes.size() == 1) {
-        runForClass(classes.get(0), psiMethod, context, performRunnable);
+        runForClass(classes.getFirst(), psiMethod, context, performRunnable);
         return true;
       }
       if (classes.isEmpty()) return false;
-      final FileEditor fileEditor = PlatformDataKeys.FILE_EDITOR.getData(context.getDataContext());
-      if (fileEditor instanceof TextEditor) {
-        final Document document = ((TextEditor)fileEditor).getEditor().getDocument();
+      final FileEditor fileEditor = PlatformCoreDataKeys.FILE_EDITOR.getData(context.getDataContext());
+      if (fileEditor instanceof TextEditor te) {
+        final Document document = te.getEditor().getDocument();
         final PsiFile containingFile = PsiDocumentManager.getInstance(context.getProject()).getPsiFile(document);
         if (containingFile instanceof PsiClassOwner) {
           final List<PsiClass> psiClasses = new ArrayList<>(Arrays.asList(((PsiClassOwner)containingFile).getClasses()));
           psiClasses.retainAll(classes);
           if (psiClasses.size() == 1) {
-            runForClass(psiClasses.get(0), psiMethod, context, performRunnable);
+            runForClass(psiClasses.getFirst(), psiMethod, context, performRunnable);
             return true;
           }
         }
@@ -114,7 +116,7 @@ public class InheritorChooser {
       classes.sort(renderer.getComparator());
 
       //suggest to run all inherited tests
-      classes.add(0, null);
+      classes.addFirst(null);
       String locationName = psiMethod != null ? psiMethod.getName() : containingClass.getName();
       JBPopupFactory.getInstance()
         .createPopupChooserBuilder(classes)
@@ -134,7 +136,34 @@ public class InheritorChooser {
         .show(getBestPopupPosition(context.getDataContext()));
       return true;
     }
+    
+    if (containingClass != null && !containingClass.hasModifierProperty(PsiModifier.STATIC)) {
+      PsiClass gContainingClass = containingClass.getContainingClass();
+      if (gContainingClass != null && !containingClass.isInheritor(gContainingClass, true)) {
+        return runMethodInAbstractClass(context, performRunnable, psiMethod, gContainingClass, acceptAbstractCondition);
+      }
+    }
     return false;
+  }
+
+  private static void collectClasses(PsiClass containingClass, List<? super PsiClass> classes, Set<? super PsiClass> visited) {
+    if (!visited.add(containingClass)) return;
+    Set<PsiClass> containers = new HashSet<>();
+    final boolean isJUnit5 = ReadAction.compute(() -> JUnitUtil.isJUnit5(containingClass));
+    ClassInheritorsSearch.search(containingClass).forEach(aClass -> {
+      PsiClass container = aClass.getContainingClass();
+      if (container != null && container.hasModifierProperty(PsiModifier.ABSTRACT)) {
+        containers.add(container);
+      }
+      if (isJUnit5 && JUnitUtil.isJUnit5TestClass(aClass, true) || PsiClassUtil.isRunnableClass(aClass, true, true)) {
+        classes.add(aClass);
+      }
+      return true;
+    });
+
+    for (PsiClass container : containers) {
+      collectClasses(container, classes, visited);
+    }
   }
 
   private void chooseAndPerform(Object[] values,
@@ -164,6 +193,25 @@ public class InheritorChooser {
         }
       }
       runForClasses(selectedClasses, psiMethod, context, performRunnable);
+    }
+  }
+
+  public static void chooseAbstractClassInheritors(final ConfigurationContext context,
+                                                   final PsiClass psiClass,
+                                                   final Consumer<? super List<PsiClass>> onClassesChosen) {
+    InheritorChooser inheritorChooser = new InheritorChooser() {
+      @Override
+      protected void runForClasses(List<PsiClass> classes, PsiMethod method, ConfigurationContext context, Runnable performRunnable) {
+        onClassesChosen.accept(classes);
+      }
+
+      @Override
+      protected void runForClass(PsiClass aClass, PsiMethod psiMethod, ConfigurationContext context, Runnable performRunnable) {
+        onClassesChosen.accept(List.of(aClass));
+      }
+    };
+    if (!inheritorChooser.runMethodInAbstractClass(context, () -> {}, null, psiClass)) {
+      onClassesChosen.accept(List.of(psiClass));
     }
   }
 }
