@@ -1,29 +1,30 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.diagnostic;
 
-import com.intellij.openapi.diagnostic.Attachment;
+import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.diagnostic.IdeaLoggingEvent;
-import com.intellij.openapi.util.text.StringUtil;
-import com.intellij.util.concurrency.AppExecutorUtil;
+import com.intellij.util.SlowOperations;
 import com.intellij.util.containers.ContainerUtil;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 
-import java.text.SimpleDateFormat;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.Future;
-import java.util.concurrent.TimeUnit;
 
+/**
+ * The class is for routing messages inside an IDE and shouldn't be accessed from plugins.
+ * <p>
+ * For reporting errors, see {@link com.intellij.openapi.diagnostic.Logger#error} methods.
+ * <p>
+ * For receiving reports, register own {@link com.intellij.openapi.diagnostic.ErrorReportSubmitter}.
+ */
+@ApiStatus.Internal
 public final class MessagePool {
   public enum State { NoErrors, ReadErrors, UnreadErrors }
 
   private static final int MAX_POOL_SIZE = 100;
-  private static final int MAX_GROUP_SIZE = 20;
-  private static final int GROUP_TIME_SPAN_MS = 1000;
 
-  private static class MessagePoolHolder {
+  private static final class MessagePoolHolder {
     private static final MessagePool ourInstance = new MessagePool();
   }
 
@@ -33,48 +34,44 @@ public final class MessagePool {
 
   private final List<AbstractMessage> myErrors = ContainerUtil.createLockFreeCopyOnWriteList();
   private final List<MessagePoolListener> myListeners = ContainerUtil.createLockFreeCopyOnWriteList();
-  private final MessageGrouper myGrouper = new MessageGrouper();
 
   private MessagePool() { }
 
+  /** @deprecated use {@link #addIdeFatalMessage(AbstractMessage)} instead */
+  @Deprecated(forRemoval = true)
   public void addIdeFatalMessage(@NotNull IdeaLoggingEvent event) {
+    addIdeFatalMessage(event.getData() instanceof AbstractMessage am ? am : new LogMessage(event.getThrowable(), event.getMessage(), List.of()));
+  }
+
+  public void addIdeFatalMessage(@NotNull AbstractMessage message) {
     if (myErrors.size() < MAX_POOL_SIZE) {
-      Object data = event.getData();
-      if (data instanceof AbstractMessage) {
-        myGrouper.addToGroup((AbstractMessage)data);
-      }
-      else {
-        myGrouper.addToGroup(new LogMessage(event.getThrowable(), event.getMessage(), Collections.emptyList()));
-      }
+      doAddMessage(message);
     }
     else if (myErrors.size() == MAX_POOL_SIZE) {
-      TooManyErrorsException e = new TooManyErrorsException();
-      myGrouper.addToGroup(new LogMessage(e, null, Collections.emptyList()));
+      doAddMessage(new LogMessage(new TooManyErrorsException(), null, List.of()));
     }
   }
 
-  public State getState() {
+  public @NotNull State getState() {
     if (myErrors.isEmpty()) return State.NoErrors;
-    for (AbstractMessage message: myErrors) {
+    for (var message: myErrors) {
       if (!message.isRead()) return State.UnreadErrors;
     }
     return State.ReadErrors;
   }
 
-  public List<AbstractMessage> getFatalErrors(boolean includeReadMessages, boolean includeSubmittedMessages) {
-    List<AbstractMessage> result = new ArrayList<>();
-    for (AbstractMessage message : myErrors) {
-      if ((!message.isRead() && !message.isSubmitted()) ||
-          (message.isRead() && includeReadMessages) ||
-          (message.isSubmitted() && includeSubmittedMessages)) {
-        result.add(message);
-      }
+  public @NotNull List<AbstractMessage> getFatalErrors(boolean includeReadMessages, boolean includeSubmittedMessages) {
+    var result = new ArrayList<AbstractMessage>();
+    for (var message : myErrors) {
+      if (!includeReadMessages && message.isRead()) continue;
+      if (!includeSubmittedMessages && (message.isSubmitted() || message.getThrowable() instanceof TooManyErrorsException)) continue;
+      result.add(message);
     }
     return result;
   }
 
   public void clearErrors() {
-    for (AbstractMessage message : myErrors) {
+    for (var message : myErrors) {
       message.setRead(true); // expire notifications
     }
     myErrors.clear();
@@ -101,56 +98,28 @@ public final class MessagePool {
     myListeners.forEach(MessagePoolListener::entryWasRead);
   }
 
-  private class MessageGrouper implements Runnable {
-    private final List<AbstractMessage> myMessages = new ArrayList<>();
-    private Future<?> myAlarm = CompletableFuture.completedFuture(null);
-
-    @Override
-    public void run() {
-      synchronized (myMessages) {
-        if (myMessages.size() > 0) {
-          post();
-        }
+  private void doAddMessage(@NotNull AbstractMessage message) {
+    for (var listener : myListeners) {
+      if (!listener.beforeEntryAdded(message)) {
+        return;
       }
     }
 
-    private void post() {
-      AbstractMessage message = myMessages.size() == 1 ? myMessages.get(0) : groupMessages();
-      message.setOnReadCallback(() -> notifyEntryRead());
-      myMessages.clear();
-      myErrors.add(message);
-      notifyEntryAdded();
+    if (ApplicationManager.getApplication().isInternal()) {
+      message.getAllAttachments().forEach(attachment -> attachment.setIncluded(true));
     }
 
-    private AbstractMessage groupMessages() {
-      AbstractMessage first = myMessages.get(0);
-
-      List<Attachment> attachments = new ArrayList<>(first.getAllAttachments());
-      StringBuilder stacktraces = new StringBuilder("Following exceptions happened soon after this one, most probably they are induced.");
-      SimpleDateFormat format = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSS");
-      for (int i = 1; i < myMessages.size(); i++) {
-        AbstractMessage next = myMessages.get(i);
-        stacktraces.append("\n\n\n").append(format.format(next.getDate())).append('\n');
-        if (!StringUtil.isEmptyOrSpaces(next.getMessage())) stacktraces.append(next.getMessage()).append('\n');
-        stacktraces.append(next.getThrowableText());
-      }
-      attachments.add(new Attachment("induced.txt", stacktraces.toString()));
-
-      return new LogMessage(first.getThrowable(), first.getMessage(), attachments);
+    if (shallAddSilently(message)) {
+      message.setRead(true);
     }
 
-    private void addToGroup(@NotNull AbstractMessage message) {
-      synchronized (myMessages) {
-        myMessages.add(message);
-        if (myMessages.size() >= MAX_GROUP_SIZE) {
-          post();
-        }
-        else {
-          myAlarm.cancel(false);
-          myAlarm = AppExecutorUtil.getAppScheduledExecutorService().schedule(this, GROUP_TIME_SPAN_MS, TimeUnit.MILLISECONDS);
-        }
-      }
-    }
+    message.setOnReadCallback(() -> notifyEntryRead());
+    myErrors.add(message);
+    notifyEntryAdded();
+  }
+
+  private static boolean shallAddSilently(AbstractMessage message) {
+    return SlowOperations.isMyMessage(message.getThrowable().getMessage());
   }
 
   public static final class TooManyErrorsException extends Exception {
