@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.vcs.actions;
 
 import com.intellij.openapi.actionSystem.AnActionEvent;
@@ -12,10 +12,9 @@ import com.intellij.openapi.vcs.VcsDataKeys;
 import com.intellij.openapi.vcs.changes.Change;
 import com.intellij.openapi.vcs.changes.ChangeList;
 import com.intellij.openapi.vcs.changes.ui.ChangesListView;
-import com.intellij.openapi.vcs.ui.Refreshable;
 import com.intellij.openapi.vfs.VirtualFile;
-import com.intellij.util.ArrayUtil;
-import com.intellij.vcsUtil.VcsUtil;
+import com.intellij.util.containers.ContainerUtil;
+import com.intellij.util.containers.JBIterable;
 import one.util.streamex.StreamEx;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -26,16 +25,11 @@ import java.util.Collection;
 import java.util.List;
 import java.util.stream.Stream;
 
-import static com.intellij.util.containers.UtilKt.concat;
-import static com.intellij.util.containers.UtilKt.stream;
-import static java.util.Collections.emptyList;
-import static java.util.stream.Collectors.toList;
-
 public class VcsContextWrapper implements VcsContext {
-  @NotNull protected final DataContext myContext;
+  protected final @NotNull DataContext myContext;
   protected final int myModifiers;
-  @NotNull private final String myPlace;
-  @Nullable private final @NlsActions.ActionText String myActionName;
+  private final @NotNull String myPlace;
+  private final @Nullable @NlsActions.ActionText String myActionName;
 
   public VcsContextWrapper(@NotNull DataContext context,
                            int modifiers,
@@ -47,65 +41,49 @@ public class VcsContextWrapper implements VcsContext {
     myActionName = actionName;
   }
 
-  @NotNull
   @Override
-  public String getPlace() {
+  public @NotNull String getPlace() {
     return myPlace;
   }
 
-  @Nullable
   @Override
-  public String getActionName() {
+  public @Nullable String getActionName() {
     return myActionName;
   }
 
-  @NotNull
-  public static VcsContext createCachedInstanceOn(@NotNull AnActionEvent event) {
+  public static @NotNull VcsContext createCachedInstanceOn(@NotNull AnActionEvent event) {
     return new CachedVcsContext(createInstanceOn(event));
   }
 
-  @NotNull
-  public static VcsContextWrapper createInstanceOn(@NotNull AnActionEvent event) {
+  public static @NotNull VcsContextWrapper createInstanceOn(@NotNull AnActionEvent event) {
     return new VcsContextWrapper(event.getDataContext(), event.getModifiers(), event.getPlace(), event.getPresentation().getText());
   }
 
-  @Nullable
   @Override
-  public Project getProject() {
+  public @Nullable Project getProject() {
     return CommonDataKeys.PROJECT.getData(myContext);
   }
 
-  @Nullable
   @Override
-  public VirtualFile getSelectedFile() {
-    return getSelectedFilesStream().findFirst().orElse(null);
+  public @Nullable VirtualFile getSelectedFile() {
+    return VcsContextUtil.selectedFilesIterable(myContext).first();
   }
 
   @Override
   public VirtualFile @NotNull [] getSelectedFiles() {
-    VirtualFile[] fileArray = CommonDataKeys.VIRTUAL_FILE_ARRAY.getData(myContext);
-    if (fileArray != null) {
-      return Stream.of(fileArray).filter(VirtualFile::isInLocalFileSystem).toArray(VirtualFile[]::new);
-    }
-
-    VirtualFile file = CommonDataKeys.VIRTUAL_FILE.getData(myContext);
-    return file != null && file.isInLocalFileSystem() ? new VirtualFile[]{file} : VirtualFile.EMPTY_ARRAY;
+    return VcsContextUtil.selectedFilesIterable(myContext).toList().toArray(VirtualFile[]::new);
   }
 
-  @NotNull
   @Override
-  public Stream<VirtualFile> getSelectedFilesStream() {
-    Stream<VirtualFile> result = VcsDataKeys.VIRTUAL_FILE_STREAM.getData(myContext);
-
-    return result != null ? result.filter(VirtualFile::isInLocalFileSystem) : VcsContext.super.getSelectedFilesStream();
+  public @NotNull Stream<VirtualFile> getSelectedFilesStream() {
+    return StreamEx.of(VcsContextUtil.selectedFilesIterable(myContext).iterator());
   }
 
-  @NotNull
   @Override
-  public List<FilePath> getSelectedUnversionedFilePaths() {
-    Stream<FilePath> result = ChangesListView.UNVERSIONED_FILE_PATHS_DATA_KEY.getData(myContext);
+  public @NotNull List<FilePath> getSelectedUnversionedFilePaths() {
+    Iterable<FilePath> result = ChangesListView.UNVERSIONED_FILE_PATHS_DATA_KEY.getData(myContext);
 
-    return result != null ? result.collect(toList()) : emptyList();
+    return JBIterable.from(result).toList();
   }
 
   @Override
@@ -118,21 +96,15 @@ public class VcsContextWrapper implements VcsContext {
     return Arrays.asList(getSelectedFiles());
   }
 
-  @Nullable
   @Override
-  public File getSelectedIOFile() {
-    File file = VcsDataKeys.IO_FILE.getData(myContext);
-
-    return file != null ? file : ArrayUtil.getFirstElement(VcsDataKeys.IO_FILE_ARRAY.getData(myContext));
+  public @Nullable File getSelectedIOFile() {
+    FilePath filePath = getSelectedFilePath();
+    return filePath != null ? filePath.getIOFile() : null;
   }
 
   @Override
   public File @Nullable [] getSelectedIOFiles() {
-    File[] files = VcsDataKeys.IO_FILE_ARRAY.getData(myContext);
-    if (!ArrayUtil.isEmpty(files)) return files;
-
-    File file = VcsDataKeys.IO_FILE.getData(myContext);
-    return file != null ? new File[]{file} : null;
+    return ContainerUtil.map(getSelectedFilePaths(), path -> path.getIOFile()).toArray(new File[0]);
   }
 
   @Override
@@ -141,8 +113,8 @@ public class VcsContextWrapper implements VcsContext {
   }
 
   @Override
-  public Refreshable getRefreshableDialog() {
-    return Refreshable.PANEL_KEY.getData(myContext);
+  public @Nullable FilePath getSelectedFilePath() {
+    return VcsContextUtil.selectedFilePathsIterable(myContext).first();
   }
 
   @Override
@@ -150,23 +122,9 @@ public class VcsContextWrapper implements VcsContext {
     return getSelectedFilePathsStream().toArray(FilePath[]::new);
   }
 
-  @NotNull
   @Override
-  public Stream<FilePath> getSelectedFilePathsStream() {
-    FilePath path = VcsDataKeys.FILE_PATH.getData(myContext);
-    Stream<FilePath> pathStream = VcsDataKeys.FILE_PATH_STREAM.getData(myContext);
-
-    return concat(
-      StreamEx.ofNullable(path),
-      pathStream != null ? pathStream : getSelectedFilesStream().map(VcsUtil::getFilePath),
-      stream(getSelectedIOFiles()).map(VcsUtil::getFilePath)
-    ).distinct();
-  }
-
-  @Nullable
-  @Override
-  public FilePath getSelectedFilePath() {
-    return ArrayUtil.getFirstElement(getSelectedFilePaths());
+  public @NotNull Stream<FilePath> getSelectedFilePathsStream() {
+    return StreamEx.of(VcsContextUtil.selectedFilePathsIterable(myContext).iterator());
   }
 
   @Override
