@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.vcs.changes;
 
 import com.intellij.diff.chains.DiffRequestProducer;
@@ -10,8 +10,9 @@ import com.intellij.diff.requests.DiffRequest;
 import com.intellij.diff.requests.ErrorDiffRequest;
 import com.intellij.diff.requests.LoadingDiffRequest;
 import com.intellij.diff.tools.util.PrevNextDifferenceIterable;
-import com.intellij.diff.util.DiffUserDataKeysEx.ScrollToPolicy;
 import com.intellij.diff.util.DiffUtil;
+import com.intellij.openapi.ListSelection;
+import com.intellij.openapi.actionSystem.AnAction;
 import com.intellij.openapi.diff.DiffBundle;
 import com.intellij.openapi.progress.ProcessCanceledException;
 import com.intellij.openapi.progress.ProgressIndicator;
@@ -19,10 +20,19 @@ import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.Comparing;
 import com.intellij.openapi.util.UserDataHolder;
 import com.intellij.openapi.vcs.FilePath;
+import com.intellij.openapi.vcs.FileStatus;
 import com.intellij.openapi.vcs.changes.actions.diff.ChangeDiffRequestProducer;
+import com.intellij.openapi.vcs.changes.actions.diff.PresentableGoToChangePopupAction;
 import com.intellij.openapi.vcs.changes.actions.diff.UnversionedDiffRequestProducer;
+import com.intellij.openapi.vcs.changes.ui.ChangesBrowserNode;
+import com.intellij.openapi.vcs.changes.ui.PresentableChange;
+import com.intellij.platform.vcs.impl.shared.changes.DiffPreviewUpdateProcessor;
 import com.intellij.util.concurrency.annotations.RequiresEdt;
 import com.intellij.util.containers.ContainerUtil;
+import com.intellij.util.containers.JBIterable;
+import org.jetbrains.annotations.ApiStatus;
+import org.jetbrains.annotations.CalledInAny;
+import org.jetbrains.annotations.Nls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
@@ -31,11 +41,12 @@ import java.util.Objects;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-public abstract class ChangeViewDiffRequestProcessor extends CacheDiffRequestProcessor.Simple implements DiffPreviewUpdateProcessor {
+public abstract class ChangeViewDiffRequestProcessor extends CacheDiffRequestProcessor.Simple
+  implements DiffPreviewUpdateProcessor, DiffRequestProcessorWithProducers {
 
   private static final int MANY_CHANGES_THRESHOLD = 10000;
 
-  @Nullable private Wrapper myCurrentChange;
+  private @Nullable Wrapper myCurrentChange;
 
   public ChangeViewDiffRequestProcessor(@NotNull Project project, @NotNull String place) {
     super(project, place);
@@ -45,13 +56,62 @@ public abstract class ChangeViewDiffRequestProcessor extends CacheDiffRequestPro
   // Abstract
   //
 
-  @NotNull
-  protected abstract Stream<Wrapper> getSelectedChanges();
+  @Override
+  public ListSelection<? extends DiffRequestProducer> collectDiffProducers(boolean selectedOnly) {
+    Project project = getProject();
+    Wrapper change = getCurrentChange();
+    List<? extends Wrapper> changes = ContainerUtil.newArrayList(selectedOnly ? iterateSelectedChanges() : iterateAllChanges());
+    return ListSelection.create(changes, change)
+      .withExplicitSelection(selectedOnly)
+      .map(wrapper -> wrapper.createProducer(project));
+  }
 
-  @NotNull
-  protected abstract Stream<Wrapper> getAllChanges();
+  /**
+   * @deprecated Use {@link #iterateSelectedChanges()}
+   */
+  @Deprecated(forRemoval = true)
+  @ApiStatus.OverrideOnly
+  public @NotNull Stream<? extends Wrapper> getSelectedChanges() {
+    throw new UnsupportedOperationException();
+  }
 
+  /**
+   * @deprecated Use {@link #iterateAllChanges()}
+   */
+  @Deprecated(forRemoval = true)
+  @ApiStatus.OverrideOnly
+  public @NotNull Stream<? extends Wrapper> getAllChanges() {
+    throw new UnsupportedOperationException();
+  }
+
+  public @NotNull Iterable<? extends Wrapper> iterateSelectedChanges() {
+    return JBIterable.from(getSelectedChanges().collect(Collectors.toList()));
+  }
+
+  public @NotNull Iterable<? extends Wrapper> iterateAllChanges() {
+    return JBIterable.from(getAllChanges().collect(Collectors.toList()));
+  }
+
+  /**
+   * Select change in view (ex: in corresponding JTree).
+   * NB: might do nothing if existing multiple selection contains passed change.
+   */
   protected abstract void selectChange(@NotNull Wrapper change);
+
+  protected boolean showAllChangesForEmptySelection() {
+    return true;
+  }
+
+  /**
+   * Prevent sudden file switch when all the changes in a file were reverted using an editor in diff viewer,
+   * in an assumption that the user intended to change something else nearby next.
+   * </p>
+   * This mode is handy for 'Local Changes' tree previews, when the file that is currently being edited
+   * may disappear from the ChangesTree, which is used as the source for the diff preview.
+   */
+  public boolean forceKeepCurrentFileWhileFocused() {
+    return false;
+  }
 
   //
   // Update
@@ -62,9 +122,8 @@ public abstract class ChangeViewDiffRequestProcessor extends CacheDiffRequestPro
     return myCurrentChange != null ? myCurrentChange.createProducer(getProject()) : null;
   }
 
-  @Nullable
   @Override
-  protected DiffRequest loadRequestFast(@NotNull DiffRequestProducer provider) {
+  protected @Nullable DiffRequest loadRequestFast(@NotNull DiffRequestProducer provider) {
     DiffRequest request = super.loadRequestFast(provider);
     return isRequestValid(request) ? request : null;
   }
@@ -93,9 +152,8 @@ public abstract class ChangeViewDiffRequestProcessor extends CacheDiffRequestPro
   // Impl
   //
 
-  @NotNull
   @Override
-  public Project getProject() {
+  public @NotNull Project getProject() {
     //noinspection ConstantConditions
     return super.getProject();
   }
@@ -135,16 +193,18 @@ public abstract class ChangeViewDiffRequestProcessor extends CacheDiffRequestPro
   public void refresh(boolean fromModelRefresh) {
     if (isDisposed()) return;
 
-    List<Wrapper> selectedChanges = getSelectedChanges().collect(Collectors.toList());
+    List<? extends Wrapper> selectedChanges = ContainerUtil.newArrayList(iterateSelectedChanges());
+    if (selectedChanges.isEmpty() && showAllChangesForEmptySelection()) selectedChanges = ContainerUtil.newArrayList(iterateAllChanges());
 
     Wrapper selectedChange = myCurrentChange != null ? ContainerUtil.find(selectedChanges, myCurrentChange) : null;
     if (fromModelRefresh &&
         selectedChange == null &&
         myCurrentChange != null &&
+        forceKeepCurrentFileWhileFocused() &&
         getContext().isWindowFocused() &&
         getContext().isFocusedInWindow()) {
       // Do not automatically switch focused viewer
-      if (selectedChanges.size() == 1 && getAllChanges().anyMatch(it -> myCurrentChange.equals(it))) {
+      if (selectedChanges.size() == 1 && ContainerUtil.exists(iterateAllChanges(), it -> myCurrentChange.equals(it))) {
         selectChange(myCurrentChange); // Restore selection if necessary
       }
       return;
@@ -163,9 +223,8 @@ public abstract class ChangeViewDiffRequestProcessor extends CacheDiffRequestPro
     setCurrentChange(selectedChange);
   }
 
-  @Nullable
   @RequiresEdt
-  public String getCurrentChangeName() {
+  public @Nullable @Nls String getCurrentChangeName() {
     if (myCurrentChange == null) {
       return null;
     }
@@ -176,6 +235,36 @@ public abstract class ChangeViewDiffRequestProcessor extends CacheDiffRequestPro
   public void setCurrentChange(@Nullable Wrapper change) {
     myCurrentChange = change;
     updateRequest();
+  }
+
+  @CalledInAny
+  public @Nullable Wrapper getCurrentChange() {
+    return myCurrentChange;
+  }
+
+  @Override
+  protected @Nullable AnAction createGoToChangeAction() {
+    return new MyGoToChangePopupAction();
+  }
+
+  private class MyGoToChangePopupAction extends PresentableGoToChangePopupAction.Default<Wrapper> {
+    @Override
+    protected @NotNull ListSelection<? extends Wrapper> getChanges() {
+      List<? extends Wrapper> allChanges = ContainerUtil.newArrayList(iterateAllChanges());
+      return ListSelection.create(allChanges, getCurrentChange());
+    }
+
+    @Override
+    protected boolean canNavigate() {
+      List<? extends Wrapper> allChanges = toListIfNotMany(iterateAllChanges(), true);
+      return allChanges == null || allChanges.size() > 1;
+    }
+
+    @Override
+    protected void onSelected(@NotNull Wrapper change) {
+      setCurrentChange(change);
+      selectChange(change);
+    }
   }
 
   @Override
@@ -192,14 +281,16 @@ public abstract class ChangeViewDiffRequestProcessor extends CacheDiffRequestPro
 
   @Override
   protected void goToNextChange(boolean fromDifferences) {
-    Objects.requireNonNull(getSelectionStrategy(false)).goNext();
-    updateRequest(false, fromDifferences ? ScrollToPolicy.FIRST_CHANGE : null);
+    goToNextChangeImpl(fromDifferences, () -> {
+      Objects.requireNonNull(getSelectionStrategy(false)).goNext();
+    });
   }
 
   @Override
   protected void goToPrevChange(boolean fromDifferences) {
-    Objects.requireNonNull(getSelectionStrategy(false)).goPrev();
-    updateRequest(false, fromDifferences ? ScrollToPolicy.LAST_CHANGE : null);
+    goToPrevChangeImpl(fromDifferences, () -> {
+      Objects.requireNonNull(getSelectionStrategy(false)).goPrev();
+    });
   }
 
   @Override
@@ -207,23 +298,30 @@ public abstract class ChangeViewDiffRequestProcessor extends CacheDiffRequestPro
     return true;
   }
 
-  @Nullable
-  private PrevNextDifferenceIterable getSelectionStrategy(boolean fromUpdate) {
+  @ApiStatus.Internal
+  protected @Nullable PrevNextDifferenceIterable getSelectionStrategy(boolean fromUpdate) {
     if (myCurrentChange == null) return null;
-    List<Wrapper> selectedChanges = toListIfNotMany(getSelectedChanges(), fromUpdate);
+
+    List<? extends Wrapper> selectedChanges = toListIfNotMany(iterateSelectedChanges(), fromUpdate);
     if (selectedChanges == null) return DumbPrevNextDifferenceIterable.INSTANCE;
-    if (selectedChanges.isEmpty()) return null;
-    if (selectedChanges.size() == 1) {
-      List<Wrapper> allChanges = toListIfNotMany(getAllChanges(), fromUpdate);
-      if (allChanges == null) return DumbPrevNextDifferenceIterable.INSTANCE;
-      return new ChangesNavigatable(allChanges, selectedChanges.get(0), true);
+    if (selectedChanges.size() > 1) {
+      return new ChangesNavigatable(selectedChanges, selectedChanges.get(0), false);
     }
-    return new ChangesNavigatable(selectedChanges, selectedChanges.get(0), false);
+    if (selectedChanges.isEmpty() && !showAllChangesForEmptySelection()) {
+      return null;
+    }
+
+    List<? extends Wrapper> allChanges = toListIfNotMany(iterateAllChanges(), fromUpdate);
+    if (allChanges == null) return DumbPrevNextDifferenceIterable.INSTANCE;
+    if (allChanges.isEmpty()) return null;
+
+    Wrapper selection = selectedChanges.isEmpty() ? allChanges.get(0) : selectedChanges.get(0);
+    return new ChangesNavigatable(allChanges, selection, true);
   }
 
   private class ChangesNavigatable implements PrevNextDifferenceIterable {
-    @NotNull private final List<? extends Wrapper> myChanges;
-    @NotNull private final Wrapper myFallback;
+    private final @NotNull List<? extends Wrapper> myChanges;
+    private final @NotNull Wrapper myFallback;
     private final boolean myUpdateSelection;
 
     ChangesNavigatable(@NotNull List<? extends Wrapper> allChanges, @NotNull Wrapper fallback, boolean updateSelection) {
@@ -276,11 +374,10 @@ public abstract class ChangeViewDiffRequestProcessor extends CacheDiffRequestPro
     }
   }
 
-  @Nullable
-  private static <T> List<T> toListIfNotMany(@NotNull Stream<T> stream, boolean fromUpdate) {
-    if (!fromUpdate) return stream.collect(Collectors.toList());
+  public static @Nullable <T> List<? extends T> toListIfNotMany(@NotNull Iterable<? extends T> iterable, boolean fromUpdate) {
+    if (!fromUpdate) return ContainerUtil.newArrayList(iterable);
 
-    List<T> result = stream.limit(MANY_CHANGES_THRESHOLD + 1).collect(Collectors.toList());
+    List<? extends T> result = JBIterable.from(iterable).take(MANY_CHANGES_THRESHOLD + 1).toList();
     if (result.size() > MANY_CHANGES_THRESHOLD) return null;
     return result;
   }
@@ -309,20 +406,19 @@ public abstract class ChangeViewDiffRequestProcessor extends CacheDiffRequestPro
     }
   }
 
+  public abstract static class Wrapper implements PresentableChange {
 
-  protected abstract static class Wrapper {
-    @NotNull
-    public abstract Object getUserObject();
+    public abstract @NotNull Object getUserObject();
 
-    @Nullable
-    public abstract String getPresentableName();
+    @CalledInAny
+    public abstract @Nullable @Nls String getPresentableName();
 
-    @Nullable
-    public abstract DiffRequestProducer createProducer(@Nullable Project project);
+    public abstract @Nullable DiffRequestProducer createProducer(@Nullable Project project);
 
     @Override
     public boolean equals(Object o) {
       if (this == o) return true;
+      if (o == null) return false;
       if (getClass() != o.getClass()) return false;
 
       Wrapper wrapper = (Wrapper)o;
@@ -335,28 +431,46 @@ public abstract class ChangeViewDiffRequestProcessor extends CacheDiffRequestPro
     }
   }
 
-  protected static class ChangeWrapper extends Wrapper {
-    @NotNull protected final Change change;
+  public static class ChangeWrapper extends Wrapper {
+    protected final @NotNull Change change;
+    protected final @Nullable ChangesBrowserNode.Tag nodeTag;
 
     public ChangeWrapper(@NotNull Change change) {
-      this.change = change;
+      this(change, null);
     }
 
-    @NotNull
+    public ChangeWrapper(@NotNull Change change, @Nullable ChangesBrowserNode.Tag nodeTag) {
+      this.change = change;
+      this.nodeTag = nodeTag;
+    }
+
     @Override
-    public Object getUserObject() {
+    public @NotNull Object getUserObject() {
       return change;
     }
 
-    @Nullable
     @Override
-    public String getPresentableName() {
-      return ChangesUtil.getFilePath(change).getName();
+    public @NotNull FilePath getFilePath() {
+      return ChangesUtil.getFilePath(change);
     }
 
-    @Nullable
     @Override
-    public DiffRequestProducer createProducer(@Nullable Project project) {
+    public @NotNull FileStatus getFileStatus() {
+      return change.getFileStatus();
+    }
+
+    @Override
+    public @Nullable @Nls String getPresentableName() {
+      return getFilePath().getName();
+    }
+
+    @Override
+    public @Nullable ChangesBrowserNode.Tag getTag() {
+      return nodeTag;
+    }
+
+    @Override
+    public @Nullable DiffRequestProducer createProducer(@Nullable Project project) {
       if (change.getBeforeRevision() instanceof FakeRevision || change.getAfterRevision() instanceof FakeRevision) {
         LoadingDiffRequest request = new LoadingDiffRequest(ChangeDiffRequestProducer.getRequestTitle(change));
         return new ErrorChangeRequestProducer(change, request);
@@ -375,62 +489,73 @@ public abstract class ChangeViewDiffRequestProcessor extends CacheDiffRequestPro
     @Override
     public boolean equals(Object o) {
       if (this == o) return true;
+      if (o == null) return false;
       if (getClass() != o.getClass()) return false;
 
       ChangeWrapper wrapper = (ChangeWrapper)o;
-      return ChangeListChange.HASHING_STRATEGY.equals(wrapper.change, change);
+      return ChangeListChange.HASHING_STRATEGY.equals(wrapper.change, change) && Objects.equals(wrapper.nodeTag, nodeTag);
     }
 
     @Override
     public int hashCode() {
-      return change.hashCode();
+      return Objects.hash(change, nodeTag);
     }
   }
 
   protected static class UnversionedFileWrapper extends Wrapper {
-    @NotNull protected final FilePath path;
+    protected final @NotNull FilePath path;
 
     public UnversionedFileWrapper(@NotNull FilePath path) {
       this.path = path;
     }
 
-    @NotNull
     @Override
-    public Object getUserObject() {
+    public @NotNull FilePath getFilePath() {
       return path;
     }
 
-    @Nullable
     @Override
-    public String getPresentableName() {
+    public @NotNull FileStatus getFileStatus() {
+      return FileStatus.UNKNOWN;
+    }
+
+    @Override
+    public @Nullable ChangesBrowserNode.Tag getTag() {
+      return ChangesBrowserNode.UNVERSIONED_FILES_TAG;
+    }
+
+    @Override
+    public @NotNull Object getUserObject() {
+      return path;
+    }
+
+    @Override
+    public @Nullable @Nls String getPresentableName() {
       return path.getName();
     }
 
-    @Nullable
     @Override
-    public DiffRequestProducer createProducer(@Nullable Project project) {
+    public @Nullable DiffRequestProducer createProducer(@Nullable Project project) {
       return UnversionedDiffRequestProducer.create(project, path);
     }
   }
 
   private static class ErrorChangeRequestProducer implements DiffRequestProducer {
-    @NotNull private final Change myChange;
-    @NotNull private final DiffRequest myRequest;
+    private final @NotNull Change myChange;
+    private final @NotNull DiffRequest myRequest;
 
     ErrorChangeRequestProducer(@NotNull Change change, @NotNull DiffRequest request) {
       myChange = change;
       myRequest = request;
     }
 
-    @NotNull
     @Override
-    public String getName() {
+    public @NotNull String getName() {
       return ChangeDiffRequestProducer.getRequestTitle(myChange);
     }
 
-    @NotNull
     @Override
-    public DiffRequest process(@NotNull UserDataHolder context, @NotNull ProgressIndicator indicator) throws ProcessCanceledException {
+    public @NotNull DiffRequest process(@NotNull UserDataHolder context, @NotNull ProgressIndicator indicator) throws ProcessCanceledException {
       return myRequest;
     }
   }
