@@ -1,17 +1,26 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.groovy.compiler.rt;
 
 import groovy.lang.Binding;
 import groovy.lang.GroovyClassLoader;
 import groovy.lang.GroovyShell;
 import groovyjarjarasm.asm.Opcodes;
-import org.codehaus.groovy.ast.*;
+import org.codehaus.groovy.ast.AnnotatedNode;
+import org.codehaus.groovy.ast.AnnotationNode;
+import org.codehaus.groovy.ast.ClassCodeVisitorSupport;
+import org.codehaus.groovy.ast.ClassHelper;
+import org.codehaus.groovy.ast.ClassNode;
+import org.codehaus.groovy.ast.FieldNode;
 import org.codehaus.groovy.ast.expr.ConstantExpression;
 import org.codehaus.groovy.ast.expr.Expression;
 import org.codehaus.groovy.ast.expr.ListExpression;
 import org.codehaus.groovy.ast.expr.MethodCallExpression;
 import org.codehaus.groovy.classgen.GeneratorContext;
-import org.codehaus.groovy.control.*;
+import org.codehaus.groovy.control.CompilationFailedException;
+import org.codehaus.groovy.control.CompilationUnit;
+import org.codehaus.groovy.control.CompilerConfiguration;
+import org.codehaus.groovy.control.Phases;
+import org.codehaus.groovy.control.SourceUnit;
 import org.codehaus.groovy.control.customizers.ImportCustomizer;
 import org.codehaus.groovy.control.messages.WarningMessage;
 import org.codehaus.groovy.tools.javac.JavaAwareCompilationUnit;
@@ -20,17 +29,27 @@ import org.codehaus.groovy.tools.javac.JavaCompilerFactory;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.io.*;
-import java.nio.charset.Charset;
+import java.io.BufferedReader;
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.io.PrintStream;
+import java.io.PrintWriter;
+import java.io.StringWriter;
+import java.lang.reflect.InvocationTargetException;
+import java.nio.charset.StandardCharsets;
 import java.security.AccessController;
 import java.security.PrivilegedAction;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Queue;
+import java.util.Random;
 import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.TimeUnit;
 
-/**
- * @author peter
- */
 public final class DependentGroovycRunner {
   public static final String TEMP_RESOURCE_SUFFIX = "___" + new Random().nextInt() + "_neverHappen";
   public static final String[] RESOURCES_TO_MASK = {
@@ -54,10 +73,10 @@ public final class DependentGroovycRunner {
     config.setOutput(new PrintWriter(err));
     config.setWarningLevel(WarningMessage.PARANOIA);
 
-    final List<GroovyCompilerMessage> compilerMessages = new ArrayList<GroovyCompilerMessage>();
-    final List<CompilationUnitPatcher> patchers = new ArrayList<CompilationUnitPatcher>();
-    final List<File> srcFiles = new ArrayList<File>();
-    final Map<String, File> class2File = new HashMap<String, File>();
+    final List<GroovyCompilerMessage> compilerMessages = new ArrayList<>();
+    final List<CompilationUnitPatcher> patchers = new ArrayList<>();
+    final List<File> srcFiles = new ArrayList<>();
+    final Map<String, File> class2File = new HashMap<>();
 
     final String[] finalOutputRef = new String[1];
     fillFromArgsFile(argsFile, config, patchers, compilerMessages, srcFiles, class2File, finalOutputRef, err);
@@ -66,7 +85,7 @@ public final class DependentGroovycRunner {
     String[] finalOutputs = finalOutputRef[0].split(File.pathSeparator);
 
     if (forStubs) {
-      Map<String, Object> options = new HashMap<String, Object>();
+      Map<String, Object> options = new HashMap<>();
       options.put(STUB_DIR, config.getTargetDirectory());
       options.put("keepStubs", Boolean.TRUE);
       config.setJointCompilationOptions(options);
@@ -75,15 +94,9 @@ public final class DependentGroovycRunner {
       }
     }
 
-    try {
-      boolean asm = !"false".equals(System.getProperty(GroovyRtConstants.GROOVYC_ASM_RESOLVING_ONLY));
-      config.getOptimizationOptions().put("asmResolving", asm);
-      config.getOptimizationOptions().put("classLoaderResolving", !asm);
-    }
-    catch (NoSuchMethodError ignored) { // old groovyc's don't have optimization options
-    }
+    applyResolvingOptions(config);
 
-    if (configScript != null && configScript.length() > 0) {
+    if (configScript != null && !configScript.isEmpty()) {
       try {
         applyConfigurationScript(new File(configScript), config, err);
       }
@@ -91,7 +104,7 @@ public final class DependentGroovycRunner {
       }
     }
 
-    out.println(GroovyRtConstants.PRESENTABLE_MESSAGE + "Groovyc: loading sources...");
+    out.println(GroovyRtConstants.PRESENTABLE_MESSAGE + "Groovyc: loading sources…");
     renameResources(finalOutputs, "", TEMP_RESOURCE_SUFFIX);
 
     final List<OutputItem> compiledFiles;
@@ -109,12 +122,18 @@ public final class DependentGroovycRunner {
             resourceLoader.myClass2File.put(aClass.getName(), file);
           }
         }
+
+        @Override
+        @SuppressWarnings("RedundantMethodOverride")
+        public void doPhaseOperation(CompilationUnit unit) throws CompilationFailedException {
+          super.doPhaseOperation(unit);
+        }
       }, Phases.CONVERSION);
 
       addSources(forStubs, srcFiles, unit);
       runPatchers(patchers, compilerMessages, unit, resourceLoader, srcFiles);
 
-      out.println(GroovyRtConstants.PRESENTABLE_MESSAGE + "Groovyc: compiling...");
+      out.println(GroovyRtConstants.PRESENTABLE_MESSAGE + "Groovyc: compiling…");
       compiledFiles = wrapper.compile(unit, forStubs && mailbox == null ? Phases.CONVERSION : Phases.ALL);
     }
     finally {
@@ -127,7 +146,7 @@ public final class DependentGroovycRunner {
 
     int errorCount = 0;
     for (GroovyCompilerMessage message : compilerMessages) {
-      if (message.getCategory() == GroovyCompilerMessageCategories.ERROR) {
+      if (GroovyCompilerMessageCategories.ERROR.equals(message.getCategory())) {
         if (errorCount > 100) {
           continue;
         }
@@ -137,6 +156,16 @@ public final class DependentGroovycRunner {
       printMessage(out, message);
     }
     return false;
+  }
+
+  private static void applyResolvingOptions(CompilerConfiguration config) {
+    try {
+      boolean asm = !"false".equals(System.getProperty(GroovyRtConstants.GROOVYC_ASM_RESOLVING_ONLY));
+      config.getOptimizationOptions().put("asmResolving", asm);
+      config.getOptimizationOptions().put("classLoaderResolving", !asm);
+    }
+    catch (NoSuchMethodError ignored) { // old groovyc's don't have optimization options
+    }
   }
 
   private static CompilerConfiguration createCompilerConfiguration(@Nullable String targetBytecode) {
@@ -167,6 +196,7 @@ public final class DependentGroovycRunner {
     binding.setVariable("configuration", configuration);
 
     CompilerConfiguration configuratorConfig = new CompilerConfiguration();
+    applyResolvingOptions(configuratorConfig);
     ImportCustomizer customizer = new ImportCustomizer();
     customizer.addStaticStars("org.codehaus.groovy.control.customizers.builder.CompilerCustomizationBuilder");
     configuratorConfig.addCompilationCustomizers(customizer);
@@ -206,7 +236,7 @@ public final class DependentGroovycRunner {
       //noinspection IOResourceOpenedButNotSafelyClosed
       stream = new FileInputStream(argsFile);
       //noinspection IOResourceOpenedButNotSafelyClosed
-      reader = new BufferedReader(new InputStreamReader(stream, Charset.forName("UTF-8")));
+      reader = new BufferedReader(new InputStreamReader(stream, StandardCharsets.UTF_8));
 
       reader.readLine(); // skip classpath
 
@@ -232,16 +262,11 @@ public final class DependentGroovycRunner {
           while (!GroovyRtConstants.END.equals(s = reader.readLine())) {
             try {
               final Class<?> patcherClass = classLoader.loadClass(s);
-              final CompilationUnitPatcher patcher = (CompilationUnitPatcher)patcherClass.newInstance();
+              final CompilationUnitPatcher patcher = (CompilationUnitPatcher)patcherClass.getConstructor().newInstance();
               patchers.add(patcher);
             }
-            catch (InstantiationException e) {
-              addExceptionInfo(compilerMessages, e, "Couldn't instantiate " + s);
-            }
-            catch (IllegalAccessException e) {
-              addExceptionInfo(compilerMessages, e, "Couldn't instantiate " + s);
-            }
-            catch (ClassNotFoundException e) {
+            catch (InstantiationException | ClassNotFoundException | IllegalAccessException | NoSuchMethodException |
+                   InvocationTargetException e) {
               addExceptionInfo(compilerMessages, e, "Couldn't instantiate " + s);
             }
           }
@@ -258,9 +283,6 @@ public final class DependentGroovycRunner {
 
         line = reader.readLine();
       }
-    }
-    catch (FileNotFoundException e) {
-      e.printStackTrace(err);
     }
     catch (IOException e) {
       e.printStackTrace(err);
@@ -306,7 +328,7 @@ public final class DependentGroovycRunner {
     }
   }
 
-  private static void reportCompiledItems(@NotNull PrintStream out, @NotNull List<? extends OutputItem> compiledFiles) {
+  private static void reportCompiledItems(@NotNull PrintStream out, @NotNull List<OutputItem> compiledFiles) {
     for (OutputItem compiledFile : compiledFiles) {
       /*
        * output path
@@ -458,6 +480,12 @@ public final class DependentGroovycRunner {
               catch (LinkageError ignored) {
               }
             }
+
+            @Override
+            @SuppressWarnings("RedundantMethodOverride")
+            public void doPhaseOperation(CompilationUnit unit) throws CompilationFailedException {
+              super.doPhaseOperation(unit);
+            }
           }, phase);
         }
 
@@ -477,8 +505,10 @@ public final class DependentGroovycRunner {
       }
     };
     unit.setCompilerFactory(new JavaCompilerFactory() {
+      @Override
       public JavaCompiler createCompiler(final CompilerConfiguration config) {
         return new JavaCompiler() {
+          @Override
           public void compile(List<String> files, CompilationUnit cu) {
             if (mailbox != null) {
               reportCompiledItems(
@@ -500,7 +530,7 @@ public final class DependentGroovycRunner {
   }
 
   private static void pauseAndWaitForJavac(Queue<? super Object> mailbox) {
-    LinkedBlockingQueue<String> fromJps = new LinkedBlockingQueue<String>();
+    LinkedBlockingQueue<String> fromJps = new LinkedBlockingQueue<>();
     mailbox.offer(fromJps); // signal that stubs are generated
     while (true) {
       try {
@@ -532,6 +562,7 @@ public final class DependentGroovycRunner {
     };
 
     GroovyClassLoader classLoader = AccessController.doPrivileged(new PrivilegedAction<GroovyClassLoader>() {
+      @Override
       public GroovyClassLoader run() {
         return new GroovyClassLoader(Thread.currentThread().getContextClassLoader(), compilerConfiguration) {
           @Override
