@@ -1,12 +1,9 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.zmlx.hg4idea.log;
 
-import com.intellij.openapi.components.ServiceManager;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.NlsSafe;
-import com.intellij.openapi.util.text.HtmlBuilder;
-import com.intellij.openapi.util.text.HtmlChunk;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.vcs.FilePath;
 import com.intellij.openapi.vcs.FileStatus;
@@ -17,9 +14,17 @@ import com.intellij.openapi.vcs.changes.ChangeListManager;
 import com.intellij.openapi.vcs.changes.ContentRevision;
 import com.intellij.openapi.vcs.changes.CurrentContentRevision;
 import com.intellij.openapi.vfs.VirtualFile;
-import com.intellij.util.*;
+import com.intellij.util.ArrayUtilRt;
+import com.intellij.util.Consumer;
+import com.intellij.util.SmartList;
+import com.intellij.util.ThrowableConsumer;
 import com.intellij.util.containers.ContainerUtil;
-import com.intellij.vcs.log.*;
+import com.intellij.vcs.log.Hash;
+import com.intellij.vcs.log.TimedVcsCommit;
+import com.intellij.vcs.log.VcsCommitMetadata;
+import com.intellij.vcs.log.VcsFullCommitDetails;
+import com.intellij.vcs.log.VcsLogObjectsFactory;
+import com.intellij.vcs.log.VcsUser;
 import com.intellij.vcs.log.impl.VcsChangesLazilyParsedDetails;
 import com.intellij.vcs.log.impl.VcsFileStatusInfo;
 import com.intellij.vcsUtil.VcsFileUtil;
@@ -27,7 +32,14 @@ import com.intellij.vcsUtil.VcsUtil;
 import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
-import org.zmlx.hg4idea.*;
+import org.zmlx.hg4idea.HgBundle;
+import org.zmlx.hg4idea.HgChange;
+import org.zmlx.hg4idea.HgContentRevision;
+import org.zmlx.hg4idea.HgFile;
+import org.zmlx.hg4idea.HgFileRevision;
+import org.zmlx.hg4idea.HgFileStatusEnum;
+import org.zmlx.hg4idea.HgRevisionNumber;
+import org.zmlx.hg4idea.HgVcs;
 import org.zmlx.hg4idea.command.HgLogCommand;
 import org.zmlx.hg4idea.command.HgStatusCommand;
 import org.zmlx.hg4idea.execution.HgCommandResult;
@@ -37,8 +49,20 @@ import org.zmlx.hg4idea.util.HgUtil;
 import org.zmlx.hg4idea.util.HgVersion;
 
 import java.io.File;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Date;
+import java.util.HashSet;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
+import java.util.function.Function;
 import java.util.stream.Collectors;
+
+import static org.zmlx.hg4idea.HgNotificationIdsHolder.LOG_CMD_EXEC_ERROR;
 
 public final class HgHistoryUtil {
 
@@ -47,10 +71,9 @@ public final class HgHistoryUtil {
   private HgHistoryUtil() {
   }
 
-  @NotNull
-  public static List<VcsCommitMetadata> loadMetadata(@NotNull final Project project,
-                                                     @NotNull final VirtualFile root, int limit,
-                                                     @NotNull List<String> parameters) {
+  public static @NotNull List<VcsCommitMetadata> loadMetadata(final @NotNull Project project,
+                                                              final @NotNull VirtualFile root, int limit,
+                                                              @NotNull List<String> parameters) {
 
     final VcsLogObjectsFactory factory = getObjectsFactoryWithDisposeCheck(project);
     if (factory == null) {
@@ -63,26 +86,7 @@ public final class HgHistoryUtil {
     templateList.add("{desc}");
     String[] templates = ArrayUtilRt.toStringArray(templateList);
     HgCommandResult result = getLogResult(project, root, version, limit, parameters, HgChangesetUtil.makeTemplate(templates));
-    HgBaseLogParser<VcsCommitMetadata> baseParser = new HgBaseLogParser<VcsCommitMetadata>() {
-
-      @Override
-      protected VcsCommitMetadata convertDetails(@NotNull String rev,
-                                                 @NotNull String changeset,
-                                                 @NotNull SmartList<? extends HgRevisionNumber> parents,
-                                                 @NotNull Date revisionDate,
-                                                 @NotNull String author,
-                                                 @NotNull String email,
-                                                 @NotNull List<String> attributes) {
-        String message = parseAdditionalStringAttribute(attributes, MESSAGE_INDEX);
-        String subject = extractSubject(message);
-        List<Hash> parentsHash = new SmartList<>();
-        for (HgRevisionNumber parent : parents) {
-          parentsHash.add(factory.createHash(parent.getChangeset()));
-        }
-        return factory.createCommitMetadata(factory.createHash(changeset), parentsHash, revisionDate.getTime(), root,
-                                            subject, author, email, message, author, email, revisionDate.getTime());
-      }
-    };
+    HgBaseLogParser<VcsCommitMetadata> baseParser = createMetadataParser(root, factory);
     return getCommitRecords(project, result, baseParser);
   }
 
@@ -93,9 +97,8 @@ public final class HgHistoryUtil {
    * <p>Warning: this is method is efficient by speed, but don't query too much, because the whole log output is retrieved at once,
    * and it can occupy too much memory. The estimate is ~600Kb for 1000 commits.</p>
    */
-  @NotNull
-  public static List<VcsFullCommitDetails> history(@NotNull Project project, @NotNull VirtualFile root, int limit,
-                                                   @NotNull List<@NonNls String> hashParameters, boolean silent)
+  public static @NotNull List<VcsFullCommitDetails> history(@NotNull Project project, @NotNull VirtualFile root, int limit,
+                                                            @NotNull List<@NonNls String> hashParameters, boolean silent)
     throws VcsException {
     HgVcs hgvcs = HgVcs.getInstance(project);
     assert hgvcs != null;
@@ -120,7 +123,7 @@ public final class HgHistoryUtil {
     }
     catch (VcsException e) {
       if (!silent) {
-        VcsNotifier.getInstance(project).notifyError("hg.log.command.execution.error",
+        VcsNotifier.getInstance(project).notifyError(LOG_CMD_EXEC_ERROR,
                                                      HgBundle.message("hg4idea.error.log.command.execution"),
                                                      e.getMessage());
       }
@@ -129,17 +132,16 @@ public final class HgHistoryUtil {
     return result;
   }
 
-  @NotNull
-  public static List<? extends VcsFullCommitDetails> createFullCommitsFromResult(@NotNull Project project,
-                                                                                 @NotNull VirtualFile root,
-                                                                                 @Nullable HgCommandResult result,
-                                                                                 @NotNull HgVersion version, boolean silent) {
+  public static @NotNull List<? extends VcsFullCommitDetails> createFullCommitsFromResult(@NotNull Project project,
+                                                                                          @NotNull VirtualFile root,
+                                                                                          @Nullable HgCommandResult result,
+                                                                                          @NotNull HgVersion version) throws VcsException {
     final VcsLogObjectsFactory factory = getObjectsFactoryWithDisposeCheck(project);
     if (factory == null) {
       return Collections.emptyList();
     }
     List<HgFileRevision> hgRevisions =
-      getCommitRecords(project, result, new HgFileRevisionLogParser(project, getOriginalHgFile(project, root), version), silent);
+      getCommitRecordsOrFail(project, result, new HgFileRevisionLogParser(project, getOriginalHgFile(project, root), version));
     List<VcsFullCommitDetails> vcsFullCommitDetailsList = new ArrayList<>();
     for (HgFileRevision revision : hgRevisions) {
       vcsFullCommitDetailsList.add(createDetails(project, root, factory, revision));
@@ -147,17 +149,16 @@ public final class HgHistoryUtil {
     return vcsFullCommitDetailsList;
   }
 
-  @NotNull
-  public static VcsFullCommitDetails createDetails(@NotNull Project project,
-                                                   @NotNull VirtualFile root,
-                                                   @NotNull VcsLogObjectsFactory factory,
-                                                   @NotNull HgFileRevision revision) {
+  public static @NotNull VcsFullCommitDetails createDetails(@NotNull Project project,
+                                                            @NotNull VirtualFile root,
+                                                            @NotNull VcsLogObjectsFactory factory,
+                                                            @NotNull HgFileRevision revision) {
     List<List<VcsFileStatusInfo>> reportedChanges = new ArrayList<>();
     reportedChanges.add(getStatusInfo(revision));
 
     HgRevisionNumber vcsRevisionNumber = revision.getRevisionNumber();
     List<? extends HgRevisionNumber> parents = vcsRevisionNumber.getParents();
-    for (HgRevisionNumber parent : parents.stream().skip(1).collect(Collectors.toList())) {
+    for (HgRevisionNumber parent : parents.stream().skip(1).toList()) {
       reportedChanges.add(getChangesFromParent(project, root, vcsRevisionNumber, parent));
     }
 
@@ -170,16 +171,14 @@ public final class HgHistoryUtil {
                                              time, reportedChanges, new HgChangesParser(vcsRevisionNumber));
   }
 
-  @NotNull
-  protected static List<VcsFileStatusInfo> getChangesFromParent(@NotNull Project project, @NotNull VirtualFile root,
-                                                                @NotNull HgRevisionNumber commit, @NotNull HgRevisionNumber parent) {
+  private static @NotNull List<VcsFileStatusInfo> getChangesFromParent(@NotNull Project project, @NotNull VirtualFile root,
+                                                                       @NotNull HgRevisionNumber commit, @NotNull HgRevisionNumber parent) {
     HgStatusCommand status = new HgStatusCommand.Builder(true).ignored(false).unknown(false).copySource(true)
       .baseRevision(parent).targetRevision(commit).build(project);
     return convertHgChanges(status.executeInCurrentThread(root));
   }
 
-  @NotNull
-  private static List<VcsFileStatusInfo> getStatusInfo(@NotNull HgFileRevision revision) {
+  private static @NotNull List<VcsFileStatusInfo> getStatusInfo(@NotNull HgFileRevision revision) {
     List<VcsFileStatusInfo> firstParentChanges = new ArrayList<>();
     for (String file : revision.getModifiedFiles()) {
       firstParentChanges.add(new VcsFileStatusInfo(Change.Type.MODIFICATION, file, null));
@@ -196,8 +195,7 @@ public final class HgHistoryUtil {
     return firstParentChanges;
   }
 
-  @NotNull
-  private static List<VcsFileStatusInfo> convertHgChanges(@NotNull Set<HgChange> changes) {
+  private static @NotNull List<VcsFileStatusInfo> convertHgChanges(@NotNull Set<HgChange> changes) {
     Set<String> deleted = new HashSet<>();
     Set<String> copied = new HashSet<>();
 
@@ -219,12 +217,12 @@ public final class HgHistoryUtil {
       String firstPath;
       String secondPath;
       switch (type) {
-        case DELETED:
+        case DELETED -> {
           firstPath = change.beforeFile().getRelativePath();
           secondPath = null;
           if (copied.contains(firstPath)) continue; // file was renamed
-          break;
-        case MOVED:
+        }
+        case MOVED -> {
           firstPath = change.beforeFile().getRelativePath();
           secondPath = change.afterFile().getRelativePath();
           if (!deleted.contains(firstPath)) {
@@ -232,44 +230,32 @@ public final class HgHistoryUtil {
             firstPath = change.afterFile().getRelativePath();
             secondPath = null;
           }
-          break;
-        case MODIFICATION:
-        case NEW:
-        default:
+        }
+        //case MODIFICATION, NEW ->
+        default -> {
           firstPath = change.afterFile().getRelativePath();
           secondPath = null;
-          break;
+        }
       }
       result.add(new VcsFileStatusInfo(type, Objects.requireNonNull(firstPath), secondPath));
     }
     return result;
   }
 
-  @Nullable
-  private static Change.Type getType(@NotNull HgFileStatusEnum status) {
-    switch (status) {
-      case ADDED:
-        return Change.Type.NEW;
-      case MODIFIED:
-        return Change.Type.MODIFICATION;
-      case DELETED:
-        return Change.Type.DELETED;
-      case COPY:
-        return Change.Type.MOVED;
-      case UNVERSIONED:
-      case MISSING:
-      case UNMODIFIED:
-      case IGNORED:
-        return null;
-    }
-    return null;
+  private static @Nullable Change.Type getType(@NotNull HgFileStatusEnum status) {
+    return switch (status) {
+      case ADDED -> Change.Type.NEW;
+      case MODIFIED -> Change.Type.MODIFICATION;
+      case DELETED -> Change.Type.DELETED;
+      case COPY -> Change.Type.MOVED;
+      case UNVERSIONED, MISSING, UNMODIFIED, IGNORED -> null;
+    };
   }
 
 
-  @Nullable
-  public static HgCommandResult getLogResult(@NotNull final Project project,
-                                             @NotNull final VirtualFile root, @NotNull HgVersion version, int limit,
-                                             @NotNull List<String> parameters, @NotNull String template) {
+  public static @Nullable HgCommandResult getLogResult(final @NotNull Project project,
+                                                       final @NotNull VirtualFile root, @NotNull HgVersion version, int limit,
+                                                       @NotNull List<String> parameters, @NotNull String template) {
     HgLogCommand hgLogCommand = new HgLogCommand(project);
     hgLogCommand.setLogFile(false);
 
@@ -314,18 +300,24 @@ public final class HgHistoryUtil {
     return new HgFile(hgFile.getRepo(), originalFileName);
   }
 
-  @NotNull
-  public static <CommitInfo> List<CommitInfo> getCommitRecords(@NotNull Project project,
-                                                               @Nullable HgCommandResult result,
-                                                               @NotNull Function<? super String, ? extends CommitInfo> converter) {
-    return getCommitRecords(project, result, converter, false);
+  public static @NotNull <CommitInfo> List<CommitInfo> getCommitRecords(@NotNull Project project,
+                                                                        @Nullable HgCommandResult result,
+                                                                        @NotNull Function<? super String, ? extends CommitInfo> converter) {
+    try {
+      return getCommitRecordsOrFail(project, result, converter);
+    }
+    catch (VcsException e) {
+      VcsNotifier.getInstance(project).notifyError(LOG_CMD_EXEC_ERROR,
+                                                   HgBundle.message("hg4idea.error.log.command.execution"),
+                                                   e.getMessage());
+      return Collections.emptyList();
+    }
   }
 
-  @NotNull
-  public static <CommitInfo> List<CommitInfo> getCommitRecords(@NotNull Project project,
-                                                               @Nullable HgCommandResult result,
-                                                               @NotNull Function<? super String, ? extends CommitInfo> converter,
-                                                               boolean silent) {
+  public static @NotNull <CommitInfo> List<CommitInfo> getCommitRecordsOrFail(@NotNull Project project,
+                                                                              @Nullable HgCommandResult result,
+                                                                              @NotNull Function<? super String, ? extends CommitInfo> converter
+  ) throws VcsException {
     final List<CommitInfo> revisions = new LinkedList<>();
     if (result == null) {
       return revisions;
@@ -334,33 +326,24 @@ public final class HgHistoryUtil {
     List<@NlsSafe String> errors = result.getErrorLines();
     if (!errors.isEmpty()) {
       if (result.getExitValue() != 0) {
-        if (silent) {
-          LOG.debug(errors.toString());
-        }
-        else {
-          String message = new HtmlBuilder().appendWithSeparators(HtmlChunk.br(), ContainerUtil.map(errors, HtmlChunk::text)).toString();
-          VcsNotifier.getInstance(project).notifyError("hg.log.command.execution.error",
-                                                       HgBundle.message("hg4idea.error.log.command.execution"),
-                                                       message);
-        }
-        return Collections.emptyList();
+        throw new VcsException(errors.toString()); //NON-NLS
       }
       LOG.warn(errors.toString());
     }
     String output = result.getRawOutput();
     List<String> changeSets = StringUtil.split(output, HgChangesetUtil.CHANGESET_SEPARATOR);
-    return ContainerUtil.mapNotNull(changeSets, converter);
+    return changeSets.stream()
+      .map(converter)
+      .filter(Objects::nonNull)
+      .collect(Collectors.toList());
   }
 
-  @NotNull
-  public static List<? extends VcsCommitMetadata> readCommitMetadata(@NotNull final Project project,
-                                                                     @NotNull final VirtualFile root,
-                                                                     @NotNull List<String> hashes)
-    throws VcsException {
+  public static void readCommitMetadata(@NotNull Project project,
+                                        @NotNull VirtualFile root,
+                                        @NotNull List<String> hashes,
+                                        @NotNull Consumer<? super VcsCommitMetadata> consumer) throws VcsException {
     final VcsLogObjectsFactory factory = getObjectsFactoryWithDisposeCheck(project);
-    if (factory == null) {
-      return Collections.emptyList();
-    }
+    if (factory == null) return;
 
     HgVcs hgvcs = HgVcs.getInstance(project);
     assert hgvcs != null;
@@ -369,44 +352,50 @@ public final class HgHistoryUtil {
     templateList.add("{desc}");
     final String[] templates = ArrayUtilRt.toStringArray(templateList);
 
-    return VcsFileUtil.foreachChunk(prepareHashes(hashes), 2,
-                                    strings -> {
-                                      HgCommandResult logResult =
-                                        getLogResult(project, root, version, -1, strings, HgChangesetUtil.makeTemplate(templates));
+    HgBaseLogParser<VcsCommitMetadata> parser = createMetadataParser(root, factory);
 
-                                      return getCommitRecords(project, logResult, new HgBaseLogParser<VcsCommitMetadata>() {
-                                        @Override
-                                        protected VcsCommitMetadata convertDetails(@NotNull String rev,
-                                                                                   @NotNull String changeset,
-                                                                                   @NotNull SmartList<? extends HgRevisionNumber> parents,
-                                                                                   @NotNull Date revisionDate,
-                                                                                   @NotNull String author,
-                                                                                   @NotNull String email,
-                                                                                   @NotNull List<String> attributes) {
-                                          String message = parseAdditionalStringAttribute(attributes, MESSAGE_INDEX);
-                                          String subject = extractSubject(message);
-                                          List<Hash> parentsHash = new SmartList<>();
-                                          for (HgRevisionNumber parent : parents) {
-                                            parentsHash.add(factory.createHash(parent.getChangeset()));
-                                          }
-                                          return factory
-                                            .createCommitMetadata(factory.createHash(changeset), parentsHash, revisionDate.getTime(), root,
-                                                                  subject, author, email, message, author, email, revisionDate.getTime());
-                                        }
-                                      });
-                                    });
+    readLog(project, root, hgvcs.getVersion(), -1,
+            prepareHashes(hashes),
+            HgChangesetUtil.makeTemplate(templates),
+            stringBuilder -> {
+              VcsCommitMetadata metadata = parser.convert(stringBuilder.toString());
+              if (metadata != null) {
+                consumer.consume(metadata);
+              }
+            });
   }
 
-  @NotNull
-  public static List<TimedVcsCommit> readAllHashes(@NotNull Project project, @NotNull VirtualFile root,
-                                                   @NotNull Consumer<? super VcsUser> userRegistry, @NotNull List<String> params) {
+  private static @NotNull HgBaseLogParser<VcsCommitMetadata> createMetadataParser(@NotNull VirtualFile root, VcsLogObjectsFactory factory) {
+    return new HgBaseLogParser<>() {
+
+      @Override
+      protected VcsCommitMetadata convertDetails(@NotNull String rev,
+                                                 @NotNull String changeset,
+                                                 @NotNull SmartList<? extends HgRevisionNumber> parents,
+                                                 @NotNull Date revisionDate,
+                                                 @NotNull String author,
+                                                 @NotNull String email,
+                                                 @NotNull List<String> attributes) {
+        String message = parseAdditionalStringAttribute(attributes, MESSAGE_INDEX);
+        String subject = extractSubject(message);
+        List<Hash> parentsHash = new SmartList<>();
+        for (HgRevisionNumber parent : parents) {
+          parentsHash.add(factory.createHash(parent.getChangeset()));
+        }
+        return factory.createCommitMetadata(factory.createHash(changeset), parentsHash, revisionDate.getTime(), root,
+                                            subject, author, email, message, author, email, revisionDate.getTime());
+      }
+    };
+  }
+
+  public static @NotNull List<TimedVcsCommit> readAllHashes(@NotNull Project project, @NotNull VirtualFile root,
+                                                            @NotNull Consumer<? super VcsUser> userRegistry, @NotNull List<String> params) {
     return readHashes(project, root, userRegistry, -1, params);
   }
 
-  @NotNull
-  public static List<TimedVcsCommit> readHashes(@NotNull Project project, @NotNull VirtualFile root,
-                                                @NotNull Consumer<? super VcsUser> userRegistry, int limit,
-                                                @NotNull List<String> params) {
+  public static @NotNull List<TimedVcsCommit> readHashes(@NotNull Project project, @NotNull VirtualFile root,
+                                                         @NotNull Consumer<? super VcsUser> userRegistry, int limit,
+                                                         @NotNull List<String> params) {
     final VcsLogObjectsFactory factory = getObjectsFactoryWithDisposeCheck(project);
     if (factory == null) {
       return Collections.emptyList();
@@ -416,7 +405,7 @@ public final class HgHistoryUtil {
     HgVersion version = hgvcs.getVersion();
     String[] templates = ArrayUtilRt.toStringArray(HgBaseLogParser.constructDefaultTemplate(version));
     HgCommandResult result = getLogResult(project, root, version, limit, params, HgChangesetUtil.makeTemplate(templates));
-    return getCommitRecords(project, result, new HgBaseLogParser<TimedVcsCommit>() {
+    return getCommitRecords(project, result, new HgBaseLogParser<>() {
 
       @Override
       protected TimedVcsCommit convertDetails(@NotNull String rev,
@@ -437,21 +426,19 @@ public final class HgHistoryUtil {
     });
   }
 
-  @Nullable
-  static VcsLogObjectsFactory getObjectsFactoryWithDisposeCheck(Project project) {
+  static @Nullable VcsLogObjectsFactory getObjectsFactoryWithDisposeCheck(Project project) {
     if (!project.isDisposed()) {
-      return ServiceManager.getService(project, VcsLogObjectsFactory.class);
+      return project.getService(VcsLogObjectsFactory.class);
     }
     return null;
   }
 
-  @NotNull
-  public static Change createChange(@NotNull Project project, @NotNull VirtualFile root,
-                                    @Nullable String fileBefore,
-                                    @Nullable HgRevisionNumber revisionBefore,
-                                    @Nullable String fileAfter,
-                                    HgRevisionNumber revisionAfter,
-                                    FileStatus aStatus) {
+  public static @NotNull Change createChange(@NotNull Project project, @NotNull VirtualFile root,
+                                             @Nullable String fileBefore,
+                                             @Nullable HgRevisionNumber revisionBefore,
+                                             @Nullable String fileAfter,
+                                             HgRevisionNumber revisionAfter,
+                                             FileStatus aStatus) {
 
     HgContentRevision beforeRevision =
       fileBefore == null || aStatus == FileStatus.ADDED ? null
@@ -473,8 +460,7 @@ public final class HgHistoryUtil {
     return new Change(beforeRevision, afterRevision, aStatus);
   }
 
-  @NotNull
-  public static List<String> prepareHashes(@NotNull List<String> hashes) {
+  public static @NotNull List<String> prepareHashes(@NotNull List<String> hashes) {
     List<String> hashArgs = new ArrayList<>();
     for (String hash : hashes) {
       hashArgs.add("-r");
@@ -483,8 +469,9 @@ public final class HgHistoryUtil {
     return hashArgs;
   }
 
-  @NotNull
-  public static Collection<String> getDescendingHeadsOfBranches(@NotNull Project project, @NotNull VirtualFile root, @NotNull Hash hash)
+  public static @NotNull Collection<String> getDescendingHeadsOfBranches(@NotNull Project project,
+                                                                         @NotNull VirtualFile root,
+                                                                         @NotNull Hash hash)
     throws VcsException {
     //hg log -r "descendants(659db54c1b6865c97c4497fa867194bcd759ca76) and head()" --template "{branch}{bookmarks}"
     Set<String> branchHeads = new HashSet<>();
@@ -512,7 +499,7 @@ public final class HgHistoryUtil {
   }
 
   private static class HgLogOutputSplitter extends HgLineProcessListener {
-    @NotNull private final StringBuilder myOutput;
+    private final @NotNull StringBuilder myOutput;
     private final Consumer<? super StringBuilder> myConsumer;
 
     HgLogOutputSplitter(Consumer<? super StringBuilder> consumer) {
@@ -535,7 +522,7 @@ public final class HgHistoryUtil {
     @Override
     public void finish() throws VcsException {
       super.finish();
-      if (myOutput.length() != 0) {
+      if (!myOutput.isEmpty()) {
         myConsumer.consume(myOutput);
         myOutput.setLength(0);
       }
