@@ -1,7 +1,10 @@
-// Copyright 2000-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.uiDesigner.designSurface;
 
 import com.intellij.codeInsight.daemon.DaemonCodeAnalyzer;
+import com.intellij.compiler.CompilerMessageImpl;
+import com.intellij.compiler.impl.ExitStatus;
+import com.intellij.compiler.progress.BuildOutputService;
 import com.intellij.designer.DesignerEditorPanelFacade;
 import com.intellij.designer.LightFillLayout;
 import com.intellij.ide.DeleteProvider;
@@ -9,11 +12,23 @@ import com.intellij.ide.highlighter.XmlFileHighlighter;
 import com.intellij.ide.palette.impl.PaletteToolWindowManager;
 import com.intellij.lang.properties.psi.PropertiesFile;
 import com.intellij.openapi.Disposable;
-import com.intellij.openapi.actionSystem.*;
+import com.intellij.openapi.actionSystem.ActionUpdateThread;
+import com.intellij.openapi.actionSystem.AnAction;
+import com.intellij.openapi.actionSystem.AnActionEvent;
+import com.intellij.openapi.actionSystem.CommonShortcuts;
+import com.intellij.openapi.actionSystem.CustomShortcutSet;
+import com.intellij.openapi.actionSystem.DataContext;
+import com.intellij.openapi.actionSystem.DataKey;
+import com.intellij.openapi.actionSystem.DataSink;
+import com.intellij.openapi.actionSystem.PlatformCoreDataKeys;
+import com.intellij.openapi.actionSystem.PlatformDataKeys;
+import com.intellij.openapi.actionSystem.UiDataProvider;
+import com.intellij.openapi.actionSystem.ex.ActionUtil;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.ModalityState;
 import com.intellij.openapi.command.CommandProcessor;
 import com.intellij.openapi.command.undo.UndoManager;
+import com.intellij.openapi.compiler.CompilerMessageCategory;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.editor.Document;
 import com.intellij.openapi.editor.Editor;
@@ -35,11 +50,28 @@ import com.intellij.openapi.util.Ref;
 import com.intellij.openapi.util.registry.Registry;
 import com.intellij.openapi.vfs.ReadonlyStatusHandler;
 import com.intellij.openapi.vfs.VirtualFile;
-import com.intellij.psi.*;
+import com.intellij.psi.PsiClass;
+import com.intellij.psi.PsiDocumentManager;
+import com.intellij.psi.PsiFile;
+import com.intellij.psi.PsiManager;
+import com.intellij.psi.PsiPlainTextFile;
+import com.intellij.psi.PsiTreeChangeAdapter;
+import com.intellij.psi.PsiTreeChangeEvent;
 import com.intellij.ui.JBColor;
 import com.intellij.ui.ScrollPaneFactory;
 import com.intellij.ui.components.JBLayeredPane;
-import com.intellij.uiDesigner.*;
+import com.intellij.uiDesigner.CutCopyPasteSupport;
+import com.intellij.uiDesigner.FormEditingUtil;
+import com.intellij.uiDesigner.GuiDesignerConfiguration;
+import com.intellij.uiDesigner.GuiFormFileType;
+import com.intellij.uiDesigner.HierarchyChangeListener;
+import com.intellij.uiDesigner.LoaderFactory;
+import com.intellij.uiDesigner.ModuleProvider;
+import com.intellij.uiDesigner.SelectionState;
+import com.intellij.uiDesigner.UIDesignerBundle;
+import com.intellij.uiDesigner.XmlReader;
+import com.intellij.uiDesigner.XmlWriter;
+import com.intellij.uiDesigner.compiler.FormErrorInfo;
 import com.intellij.uiDesigner.compiler.Utils;
 import com.intellij.uiDesigner.componentTree.ComponentPtr;
 import com.intellij.uiDesigner.componentTree.ComponentSelectionListener;
@@ -50,6 +82,8 @@ import com.intellij.uiDesigner.editor.UIFormEditor;
 import com.intellij.uiDesigner.lw.CompiledClassPropertiesProvider;
 import com.intellij.uiDesigner.lw.IProperty;
 import com.intellij.uiDesigner.lw.LwRootContainer;
+import com.intellij.uiDesigner.make.FormElementNavigatable;
+import com.intellij.uiDesigner.make.FormSourceCodeGenerator;
 import com.intellij.uiDesigner.palette.ComponentItem;
 import com.intellij.uiDesigner.propertyInspector.DesignerToolWindow;
 import com.intellij.uiDesigner.propertyInspector.DesignerToolWindowManager;
@@ -60,15 +94,32 @@ import com.intellij.uiDesigner.radComponents.RadContainer;
 import com.intellij.uiDesigner.radComponents.RadRootContainer;
 import com.intellij.uiDesigner.radComponents.RadTabbedPane;
 import com.intellij.util.Alarm;
+import com.intellij.util.concurrency.ThreadingAssertions;
 import com.intellij.util.ui.UIUtil;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import javax.swing.*;
+import javax.swing.JComponent;
+import javax.swing.JLabel;
+import javax.swing.JLayeredPane;
+import javax.swing.JPanel;
+import javax.swing.JScrollPane;
+import javax.swing.KeyStroke;
+import javax.swing.Scrollable;
+import javax.swing.SwingConstants;
+import javax.swing.SwingUtilities;
 import javax.swing.event.EventListenerList;
 import javax.swing.event.ListSelectionEvent;
-import java.awt.*;
+import java.awt.BorderLayout;
+import java.awt.CardLayout;
+import java.awt.Component;
+import java.awt.Dimension;
+import java.awt.GridBagConstraints;
+import java.awt.GridBagLayout;
+import java.awt.Insets;
+import java.awt.Rectangle;
 import java.awt.dnd.DnDConstants;
 import java.awt.dnd.DropTarget;
 import java.awt.event.FocusEvent;
@@ -76,23 +127,25 @@ import java.awt.event.FocusListener;
 import java.awt.event.InputEvent;
 import java.awt.event.KeyEvent;
 import java.lang.reflect.InvocationTargetException;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.Locale;
+import java.util.Map;
 
 /**
  * {@code GuiEditor} is a panel with border layout. It has palette at the north,
  * tree of component with property editor at the west and editor area at the center.
  * This editor area contains internal component where user edit the UI.
- *
- * @author Anton Katilin
- * @author Vladimir Kondratyev
  */
-public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade, DataProvider, ModuleProvider, Disposable {
+public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade, UiDataProvider, ModuleProvider, Disposable {
   private static final Logger LOG = Logger.getInstance(GuiEditor.class);
 
   private final Project myProject;
-  @NotNull private final UIFormEditor myEditor;
+  private final @NotNull UIFormEditor myEditor;
   private Module myModule;
-  @NotNull private final VirtualFile myFile;
+  private final @NotNull VirtualFile myFile;
 
   /**
    * for debug purposes
@@ -115,16 +168,16 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
   /**
    * This is the topmost layer. It gets and redispatch all incoming events
    */
-  private static final Integer LAYER_GLASS = new Integer(JLayeredPane.DRAG_LAYER.intValue() + 100);
+  private static final Integer LAYER_GLASS = Integer.valueOf(JLayeredPane.DRAG_LAYER.intValue() + 100);
   /**
    * This layer contains all "active" decorators. This layer should be over
    * LAYER_GLASS because active decorators must get AWT events to work correctly.
    */
-  private static final Integer LAYER_ACTIVE_DECORATION = new Integer(LAYER_GLASS.intValue() + 100);
+  private static final Integer LAYER_ACTIVE_DECORATION = Integer.valueOf(LAYER_GLASS.intValue() + 100);
   /**
    * This layer contains all inplace editors.
    */
-  private static final Integer LAYER_INPLACE_EDITING = new Integer(LAYER_ACTIVE_DECORATION.intValue() + 100);
+  private static final Integer LAYER_INPLACE_EDITING = Integer.valueOf(LAYER_ACTIVE_DECORATION.intValue() + 100);
 
   private final EventListenerList myListenerList;
   /**
@@ -135,12 +188,12 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
   private final Document myDocument;
 
   final MainProcessor myProcessor;
-  @NotNull private final JScrollPane myScrollPane;
+  private final @NotNull JScrollPane myScrollPane;
   /**
    * This layered pane contains all layers to lay components out and to
    * show all necessary decoration items
    */
-  @NotNull private final MyLayeredPane myLayeredPane;
+  private final @NotNull MyLayeredPane myLayeredPane;
   /**
    * The component which represents decoration layer. All passive
    * decorators are on this layer.
@@ -173,11 +226,11 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
   private final DocumentListener myDocumentListener;
   private final CardLayout myCardLayout = new CardLayout();
   private final Disposable myContentSplitterDisposable = Disposer.newDisposable();
-  private final ThreeComponentsSplitter myContentSplitter = new ThreeComponentsSplitter(myContentSplitterDisposable);
+  private final ThreeComponentsSplitter myContentSplitter = new ThreeComponentsSplitter();
   private final JPanel myCardPanel = new JPanel(myCardLayout);
 
-  @NonNls private static final String CARD_VALID = "valid";
-  @NonNls private static final String CARD_INVALID = "invalid";
+  private static final @NonNls String CARD_VALID = "valid";
+  private static final @NonNls String CARD_INVALID = "invalid";
   private final JPanel myValidCard;
   private final JPanel myInvalidCard;
   private boolean myInvalid;
@@ -187,7 +240,7 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
    * Implementation of Crtl+W and Ctrl+Shift+W behavior
    */
   private final SelectionState mySelectionState;
-  @NotNull private final GlassLayer myGlassLayer;
+  private final @NotNull GlassLayer myGlassLayer;
   private final ActiveDecorationLayer myActiveDecorationLayer;
 
   private boolean myShowGrid = true;
@@ -204,7 +257,7 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
    */
   private Object myNextSaveGroupId = new Object();
 
-  @NonNls private static final String ourHelpID = "guiDesigner.uiTour.workspace";
+  private static final @NonNls String ourHelpID = "guiDesigner.uiTour.workspace";
 
   public static final DataKey<GuiEditor> DATA_KEY = DataKey.create(GuiEditor.class.getName());
 
@@ -281,7 +334,7 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
     final Alarm alarm = new Alarm();
     myDocumentListener = new DocumentListener() {
       @Override
-      public void documentChanged(@NotNull final DocumentEvent e) {
+      public void documentChanged(final @NotNull DocumentEvent e) {
         if (!myInsideChange) {
           UndoManager undoManager = UndoManager.getInstance(getProject());
           alarm.cancelAllRequests();
@@ -322,7 +375,7 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
     gbc.weighty = 1.0;
 
     myScrollPane = ScrollPaneFactory.createScrollPane(myLayeredPane);
-    myScrollPane.setBackground(new JBColor(() -> EditorColorsManager.getInstance().getGlobalScheme().getDefaultBackground()));
+    myScrollPane.setBackground(JBColor.lazy(() -> EditorColorsManager.getInstance().getGlobalScheme().getDefaultBackground()));
     panel.add(myScrollPane, gbc);
     myHorzCaptionPanel.attachToScrollPane(myScrollPane);
     myVertCaptionPanel.attachToScrollPane(myScrollPane);
@@ -342,17 +395,18 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
 
     myDropTargetListener = new DesignDropTargetListener(this);
     if (!ApplicationManager.getApplication().isHeadlessEnvironment()) {
+      //noinspection ResultOfObjectAllocationIgnored
       new DropTarget(getGlassLayer(), DnDConstants.ACTION_COPY_OR_MOVE, myDropTargetListener);
     }
 
     myActiveDecorationLayer.installSelectionWatcher();
 
-    EmptyAction.registerWithShortcutSet("GuiDesigner.IncreaseIndent",
-                                        new CustomShortcutSet(KeyStroke.getKeyStroke(KeyEvent.VK_TAB, 0)),
-                                        myGlassLayer);
-    EmptyAction.registerWithShortcutSet("GuiDesigner.DecreaseIndent",
-                                        new CustomShortcutSet(KeyStroke.getKeyStroke(KeyEvent.VK_TAB, InputEvent.SHIFT_MASK)),
-                                        myGlassLayer);
+    ActionUtil.wrap("GuiDesigner.IncreaseIndent").registerCustomShortcutSet(
+      new CustomShortcutSet(KeyStroke.getKeyStroke(KeyEvent.VK_TAB, 0)),
+      myGlassLayer);
+    ActionUtil.wrap("GuiDesigner.DecreaseIndent").registerCustomShortcutSet(
+      new CustomShortcutSet(KeyStroke.getKeyStroke(KeyEvent.VK_TAB, InputEvent.SHIFT_MASK)),
+      myGlassLayer);
 
     if (!ApplicationManager.getApplication().isUnitTestMode()) {
       UIUtil.invokeLaterIfNeeded(() -> {
@@ -367,19 +421,17 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
     return myContentSplitter;
   }
 
-  @NotNull
-  public UIFormEditor getEditor() {
+  public @NotNull UIFormEditor getEditor() {
     return myEditor;
   }
 
-  @NotNull
-  public SelectionState getSelectionState() {
+  public @NotNull SelectionState getSelectionState() {
     return mySelectionState;
   }
 
   @Override
   public void dispose() {
-    ApplicationManager.getApplication().assertIsDispatchThread();
+    ThreadingAssertions.assertEventDispatchThread();
 
     if (myWhere != null) {
       LOG.error("Already disposed: old trace: ", myWhere);
@@ -401,9 +453,8 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
     Disposer.dispose(myContentSplitterDisposable);
   }
 
-  @NotNull
   @Override
-  public Module getModule() {
+  public @NotNull Module getModule() {
     if (myModule.isDisposed()) {
       myModule = ModuleUtilCore.findModuleForFile(myFile, myProject);
       if (myModule == null) {
@@ -413,14 +464,12 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
     return myModule;
   }
 
-  @NotNull
   @Override
-  public Project getProject() {
+  public @NotNull Project getProject() {
     return myProject;
   }
 
-  @NotNull
-  public VirtualFile getFile() {
+  public @NotNull VirtualFile getFile() {
     return myFile;
   }
 
@@ -487,6 +536,16 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
     return myNextSaveGroupId;
   }
 
+  @ApiStatus.Internal
+  public @NotNull CutCopyPasteSupport getCutCopyPasteDelegator() {
+    return myCutCopyPasteSupport;
+  }
+
+  @ApiStatus.Internal
+  public @NotNull DeleteProvider getDeleteProvider() {
+    return myDeleteProvider;
+  }
+
   private static void refreshImpl(final RadComponent component) {
     if (component.getParent() != null) {
       final Dimension size = component.getSize();
@@ -502,10 +561,9 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
       }
     }
 
-    if (component instanceof RadContainer) {
+    if (component instanceof RadContainer container) {
       component.refresh();
 
-      final RadContainer container = (RadContainer)component;
       for (int i = container.getComponentCount() - 1; i >= 0; i--) {
         refreshImpl(container.getComponent(i));
       }
@@ -513,32 +571,21 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
   }
 
   @Override
-  public Object getData(@NotNull final String dataId) {
-    if (PlatformDataKeys.HELP_ID.is(dataId)) {
-      return ourHelpID;
-    }
+  public void uiDataSnapshot(@NotNull DataSink sink) {
+    sink.set(PlatformCoreDataKeys.HELP_ID, ourHelpID);
 
     // Standard Swing cut/copy/paste actions should work if user is editing something inside property inspector
     Project project = getProject();
-    if (project.isDisposed()) return null;
+    if (project.isDisposed()) return;
     DesignerToolWindow toolWindow = DesignerToolWindowManager.getInstance(this);
-    if (toolWindow == null) return null;
-    final PropertyInspector inspector = toolWindow.getPropertyInspector();
-    if (inspector != null && inspector.isEditing()) {
-      return null;
-    }
+    if (toolWindow == null) return;
+    PropertyInspector inspector = toolWindow.getPropertyInspector();
+    if (inspector != null && inspector.isEditing()) return;
 
-    if (PlatformDataKeys.DELETE_ELEMENT_PROVIDER.is(dataId)) {
-      return myDeleteProvider;
-    }
-
-    if (PlatformDataKeys.COPY_PROVIDER.is(dataId) ||
-        PlatformDataKeys.CUT_PROVIDER.is(dataId) ||
-        PlatformDataKeys.PASTE_PROVIDER.is(dataId)) {
-      return myCutCopyPasteSupport;
-    }
-
-    return null;
+    sink.set(PlatformDataKeys.DELETE_ELEMENT_PROVIDER, myDeleteProvider);
+    sink.set(PlatformDataKeys.COPY_PROVIDER, myCutCopyPasteSupport);
+    sink.set(PlatformDataKeys.CUT_PROVIDER, myCutCopyPasteSupport);
+    sink.set(PlatformDataKeys.PASTE_PROVIDER, myCutCopyPasteSupport);
   }
 
   private JPanel createInvalidCard() {
@@ -561,8 +608,7 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
    * @return the topmost {@code UiConainer} which in the root of
    * component hierarchy. This method never returns {@code null}.
    */
-  @NotNull
-  public RadRootContainer getRootContainer() {
+  public @NotNull RadRootContainer getRootContainer() {
     return myRootContainer;
   }
 
@@ -583,8 +629,7 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
     }
   }
 
-  @NotNull
-  public GlassLayer getGlassLayer() {
+  public @NotNull GlassLayer getGlassLayer() {
     return myGlassLayer;
   }
 
@@ -596,8 +641,7 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
     return myInplaceEditingLayer;
   }
 
-  @NotNull
-  public JLayeredPane getLayeredPane() {
+  public @NotNull JLayeredPane getLayeredPane() {
     return myLayeredPane;
   }
 
@@ -623,19 +667,22 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
   /**
    * Adds specified hierarchy change listener
    */
-  public void addHierarchyChangeListener(@NotNull final HierarchyChangeListener l) {
+  public void addHierarchyChangeListener(final @NotNull HierarchyChangeListener l) {
     myListenerList.add(HierarchyChangeListener.class, l);
   }
 
   /**
    * Removes specified hierarchy change listener
    */
-  public void removeHierarchyChangeListener(@NotNull final HierarchyChangeListener l) {
+  public void removeHierarchyChangeListener(final @NotNull HierarchyChangeListener l) {
     myListenerList.remove(HierarchyChangeListener.class, l);
   }
 
   private void saveToFile() {
     LOG.debug("GuiEditor.saveToFile(): group ID=" + myNextSaveGroupId);
+
+    GuiDesignerConfiguration designerConfiguration = GuiDesignerConfiguration.getInstance(myProject);
+
     CommandProcessor.getInstance().executeCommand(getProject(), () -> ApplicationManager.getApplication().runWriteAction(() -> {
       myInsideChange = true;
       try {
@@ -657,6 +704,14 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
           LOG.error(e);
           myDocument.replaceString(0, oldText.length(), newText);
         }
+
+        if (!designerConfiguration.INSTRUMENT_CLASSES && designerConfiguration.GENERATE_SOURCES_ON_SAVE) {
+          try {
+            updateSources();
+          } catch (Throwable e) {
+            LOG.error(e);
+          }
+        }
       }
       finally {
         myInsideChange = false;
@@ -667,6 +722,50 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
     fireHierarchyChanged();
   }
 
+  private void updateSources() {
+    LOG.debug("Updating sources for form '" + myFile.getPath());
+
+    FileDocumentManager.getInstance().saveDocument(myDocument);
+    PsiDocumentManager.getInstance(myProject).commitAllDocuments();
+
+    final boolean generateFinalFields = GuiDesignerConfiguration.getInstance(myProject).GENERATE_SOURCES_FINAL_FIELDS;
+    final FormSourceCodeGenerator generator = new FormSourceCodeGenerator(myProject, generateFinalFields);
+    generator.generate(myFile);
+
+    final ArrayList<FormErrorInfo> errors = generator.getErrors();
+    if (!errors.isEmpty()) {
+      StringBuilder builder = new StringBuilder();
+      builder.append("Unable to update sources for form '").append(myFile.getPath()).append("' due to errors:\n");
+      errors.forEach(error -> {
+        builder.append(error.getComponentId()).append(" ").append(error.getErrorMessage()).append("\n");
+      });
+      LOG.info(builder.toString());
+
+      BuildOutputService buildOutput = new BuildOutputService(
+        myProject,
+        UIDesignerBundle.message("tab.build.ui.designer")
+      );
+      Object sessionId = new Object();
+      long stamp = System.currentTimeMillis();
+      buildOutput.onStart(sessionId, stamp, null, null);
+
+      for (FormErrorInfo error : errors) {
+        FormElementNavigatable navigatable = new FormElementNavigatable(myProject, myFile, error.getComponentId());
+        buildOutput.addMessage(
+          sessionId,
+          new CompilerMessageImpl(
+            myProject,
+            CompilerMessageCategory.ERROR,
+            myFile.getPresentableUrl() + ": " + error.getErrorMessage(), //NON-NLS
+            myFile,
+            -1, -1,
+            navigatable
+          ));
+      }
+      buildOutput.onEnd(sessionId, ExitStatus.ERRORS, stamp + 1);
+    }
+  }
+
   public ActiveDecorationLayer getActiveDecorationLayer() {
     return myActiveDecorationLayer;
   }
@@ -675,11 +774,10 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
     myRootContainer.setStringDescriptorLocale(locale);
     refreshProperties();
     DesignerToolWindowManager.getInstance(this).updateComponentTree();
-    DaemonCodeAnalyzer.getInstance(getProject()).restart();
+    DaemonCodeAnalyzer.getInstance(getProject()).restart(this);
   }
 
-  @Nullable
-  public Locale getStringDescriptorLocale() {
+  public @Nullable Locale getStringDescriptorLocale() {
     return myRootContainer.getStringDescriptorLocale();
   }
 
@@ -689,8 +787,7 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
       final RadComponent radComponent = (RadComponent)component;
       boolean componentModified = false;
       for (IProperty prop : component.getModifiedProperties()) {
-        if (prop instanceof IntroStringProperty) {
-          IntroStringProperty strProp = (IntroStringProperty)prop;
+        if (prop instanceof IntroStringProperty strProp) {
           componentModified = strProp.refreshValue(radComponent) || componentModified;
         }
       }
@@ -730,8 +827,7 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
     mySelectionAnchor = new ComponentPtr(this, component);
   }
 
-  @Nullable
-  public RadComponent getSelectionAnchor() {
+  public @Nullable RadComponent getSelectionAnchor() {
     if (mySelectionAnchor == null) return null;
     mySelectionAnchor.validate();
     return mySelectionAnchor.getComponent();
@@ -741,8 +837,7 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
     mySelectionLead = new ComponentPtr(this, component);
   }
 
-  @Nullable
-  public RadComponent getSelectionLead() {
+  public @Nullable RadComponent getSelectionLead() {
     if (mySelectionLead == null) return null;
     mySelectionLead.validate();
     return mySelectionLead.getComponent();
@@ -817,7 +912,7 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
   /**
    * @param rootContainer new container to be set as a root.
    */
-  private void setRootContainer(@NotNull final RadRootContainer rootContainer) {
+  private void setRootContainer(final @NotNull RadRootContainer rootContainer) {
     if (myRootContainer != null) {
       myLayeredPane.remove(myRootContainer.getDelegee());
     }
@@ -908,8 +1003,7 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
   private Map<String, String> saveTabbedPaneSelectedTabs() {
     final Map<String, String> result = new HashMap<>();
     FormEditingUtil.iterate(getRootContainer(), component -> {
-      if (component instanceof RadTabbedPane) {
-        RadTabbedPane tabbedPane = (RadTabbedPane)component;
+      if (component instanceof RadTabbedPane tabbedPane) {
         RadComponent c = tabbedPane.getSelectedTab();
         if (c != null) {
           result.put(tabbedPane.getId(), c.getId());
@@ -922,8 +1016,7 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
 
   private void restoreTabbedPaneSelectedTabs(final Map<String, String> tabbedPaneSelectedTabs) {
     FormEditingUtil.iterate(getRootContainer(), component -> {
-      if (component instanceof RadTabbedPane) {
-        RadTabbedPane tabbedPane = (RadTabbedPane)component;
+      if (component instanceof RadTabbedPane tabbedPane) {
         String selectedTabId = tabbedPaneSelectedTabs.get(tabbedPane.getId());
         if (selectedTabId != null) {
           for (RadComponent c : tabbedPane.getComponents()) {
@@ -980,8 +1073,7 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
     return myDropTargetListener;
   }
 
-  @Nullable
-  public GridCaptionPanel getFocusedCaptionPanel() {
+  public @Nullable GridCaptionPanel getFocusedCaptionPanel() {
     if (myHorzCaptionPanel.isFocusOwner()) {
       return myHorzCaptionPanel;
     }
@@ -1026,15 +1118,8 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
   }
 
   private final class MyLayeredPane extends JBLayeredPane implements Scrollable {
-    /**
-     * All components allocate whole pane's area.
-     */
-    @Override
-    public void doLayout() {
-      for (int i = getComponentCount() - 1; i >= 0; i--) {
-        final Component component = getComponent(i);
-        component.setBounds(0, 0, getWidth(), getHeight());
-      }
+    private MyLayeredPane() {
+      setFullOverlayLayout(true); // All components allocate whole pane's area.
     }
 
     @Override
@@ -1095,13 +1180,18 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
    */
   private final class CancelCurrentOperationAction extends AnAction {
     @Override
-    public void actionPerformed(@NotNull final AnActionEvent e) {
+    public void actionPerformed(final @NotNull AnActionEvent e) {
       myProcessor.cancelOperation();
       myQuickFixManager.hideIntentionHint();
     }
 
     @Override
-    public void update(@NotNull final AnActionEvent e) {
+    public @NotNull ActionUpdateThread getActionUpdateThread() {
+      return ActionUpdateThread.EDT;
+    }
+
+    @Override
+    public void update(final @NotNull AnActionEvent e) {
       PropertyInspector inspector = DesignerToolWindowManager.getInstance(GuiEditor.this).getPropertyInspector();
       e.getPresentation().setEnabled(inspector != null && !inspector.isEditing());
     }
@@ -1112,7 +1202,12 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
    */
   private final class MyDeleteProvider implements DeleteProvider {
     @Override
-    public void deleteElement(@NotNull final DataContext dataContext) {
+    public @NotNull ActionUpdateThread getActionUpdateThread() {
+      return ActionUpdateThread.EDT;
+    }
+
+    @Override
+    public void deleteElement(final @NotNull DataContext dataContext) {
       if (!ensureEditable()) {
         return;
       }
@@ -1120,7 +1215,7 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
     }
 
     @Override
-    public boolean canDeleteElement(@NotNull final DataContext dataContext) {
+    public boolean canDeleteElement(final @NotNull DataContext dataContext) {
       return
         !DesignerToolWindowManager.getInstance(GuiEditor.this).getPropertyInspector().isEditing() &&
         !myInplaceEditingLayer.isEditing() &&
@@ -1149,17 +1244,17 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
     }
 
     @Override
-    public void childAdded(@NotNull final PsiTreeChangeEvent event) {
+    public void childAdded(final @NotNull PsiTreeChangeEvent event) {
       handleEvent(event);
     }
 
     @Override
-    public void childMoved(@NotNull final PsiTreeChangeEvent event) {
+    public void childMoved(final @NotNull PsiTreeChangeEvent event) {
       handleEvent(event);
     }
 
     @Override
-    public void childrenChanged(@NotNull final PsiTreeChangeEvent event) {
+    public void childrenChanged(final @NotNull PsiTreeChangeEvent event) {
       handleEvent(event);
     }
 
@@ -1174,7 +1269,7 @@ public final class GuiEditor extends JPanel implements DesignerEditorPanelFacade
     }
 
     @Override
-    public void propertyChanged(@NotNull final PsiTreeChangeEvent event) {
+    public void propertyChanged(final @NotNull PsiTreeChangeEvent event) {
       if (PsiTreeChangeEvent.PROP_ROOTS.equals(event.getPropertyName())) {
         myAlarm.cancelRequest(myRefreshPropertiesRequest);
         myAlarm.addRequest(myRefreshPropertiesRequest, 500, ModalityState.stateForComponent(GuiEditor.this));
