@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.jetbrains.env.python.testing;
 
 import com.intellij.execution.ExecutionException;
@@ -26,13 +26,11 @@ import com.jetbrains.python.psi.LanguageLevel;
 import com.jetbrains.python.psi.PyFunction;
 import com.jetbrains.python.run.targetBasedConfiguration.PyRunTargetVariant;
 import com.jetbrains.python.sdk.InvalidSdkException;
-import com.jetbrains.python.sdk.flavors.IronPythonSdkFlavor;
 import com.jetbrains.python.testing.ConfigurationTarget;
 import com.jetbrains.python.testing.PyUnitTestConfiguration;
 import com.jetbrains.python.testing.PyUnitTestFactory;
-import com.jetbrains.python.testing.PythonTestConfigurationsModel;
+import com.jetbrains.python.testing.PythonTestConfigurationType;
 import com.jetbrains.python.tools.sdkTools.SdkCreationType;
-import org.hamcrest.Matchers;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.junit.Assert;
@@ -40,11 +38,13 @@ import org.junit.Test;
 
 import java.io.IOException;
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 
 import static com.intellij.testFramework.assertions.Assertions.assertThat;
 import static com.jetbrains.env.ut.PyScriptTestProcessRunner.TEST_TARGET_PREFIX;
+import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.not;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 
@@ -95,11 +95,11 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
   @Test
   public void testCantRerun() {
     runPythonTest(
-      new PyUnitTestLikeProcessWithConsoleTestTask<PyUnitTestProcessRunner>("/testRunner/env/unit", "test_with_skips_and_errors.py",
-                                                                            config -> {
-                                                                              // Second rerun should lead to exception
-                                                                              return createTestRunner(config.increaseRerunCount(2));
-                                                                            }) {
+      new PyUnitTestLikeProcessWithConsoleTestTask<>("/testRunner/env/unit", "test_with_skips_and_errors.py",
+                                                     config -> {
+                                                       // Second rerun should lead to exception
+                                                       return createTestRunner(config.increaseRerunCount(2));
+                                                     }) {
         @Override
         protected void exceptionThrown(@NotNull Throwable e, @NotNull PyUnitTestProcessRunner runner) {
           assertEquals("Wrong type of exception", e.getClass(), ExecutionException.class);
@@ -194,8 +194,11 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
                                       @NotNull final String stdout,
                                       @NotNull final String stderr,
                                       @NotNull final String all, int exitCode) {
-        Assert.assertThat("No expected", stdout, Matchers.containsString("expected='1'"));
-        Assert.assertThat("No actual", stdout, Matchers.containsString("actual='2'"));
+        Assert.assertThat("No expected", stdout, containsString("expected='1'"));
+        Assert.assertThat("No actual", stdout, containsString("actual='2'"));
+        var consoleError = MockPrinter.fillPrinter(runner.getTestProxy()).getStdErr();
+        Assert.assertThat("No stacktrace", consoleError, containsString("test_test.py\", line 4,"));
+        Assert.assertThat("Garbage in stack trace", consoleError, not(containsString("diff_tools.py")));
       }
     });
   }
@@ -234,7 +237,7 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
   public void testRenameClass() {
     runPythonTest(
       new CreateConfigurationByFileTask.CreateConfigurationTestAndRenameClassTask<>(
-        PythonTestConfigurationsModel.getPythonsUnittestName(),
+        PythonTestConfigurationType.getInstance().getUnitTestFactory().getName(),
         PyUnitTestConfiguration.class));
   }
 
@@ -246,7 +249,7 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
         @NotNull
         @Override
         protected PyUnitTestFactory createFactory() {
-          return new PyUnitTestFactory();
+          return PythonTestConfigurationType.getInstance().getUnitTestFactory();
         }
 
         @Override
@@ -286,11 +289,52 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
                                       @NotNull final String stderr,
                                       @NotNull final String all, int exitCode) {
         assertEquals("Runner did not stop after first fail", 1, runner.getAllTestsCount());
-        assertEquals("Bad tree produced for failfast", "Test tree:\n" +
-                                                       "[root](-)\n" +
-                                                       ".test_test(-)\n" +
-                                                       "..SomeTestCase(-)\n" +
-                                                       "...test_1_test(-)\n", runner.getFormattedTestTree());
+        assertEquals("Bad tree produced for failfast", """
+          Test tree:
+          [root](-)
+          .test_test(-)
+          ..SomeTestCase(-)
+          ...test_1_test(-)
+          """, runner.getFormattedTestTree());
+      }
+    });
+  }
+
+  /**
+   * test should be launched from __init__.py
+   */
+  @Test
+  public void testTestInInit() {
+
+    runPythonTest(new PyUnitTestProcessWithConsoleTestTask("testRunner/env/unit/testInInit", "") {
+
+      @NotNull
+      @Override
+      protected PyUnitTestProcessRunner createProcessRunner() {
+        return new PyUnitTestProcessRunner("", 0) {
+          @Override
+          protected void configurationCreatedAndWillLaunch(@NotNull final PyUnitTestConfiguration configuration) throws IOException {
+            super.configurationCreatedAndWillLaunch(configuration);
+            configuration.getTarget().setTargetType(PyRunTargetVariant.PYTHON);
+            configuration.getTarget().setTarget("mymodule.ExampleModuleTestCase");
+          }
+        };
+      }
+
+      @Override
+      protected void checkTestResults(@NotNull final PyUnitTestProcessRunner runner,
+                                      @NotNull final String stdout,
+                                      @NotNull final String stderr,
+                                      @NotNull final String all, int exitCode) {
+        assertEquals("wrong test launched", """
+          Test tree:
+          [root](+)
+          .mymodule(+)
+          ..ExampleModuleTestCase(+)
+          ...test1(+)
+          ...test2(+)
+          """, runner.getFormattedTestTree());
+        assertEquals("wrong exit code", 0, exitCode);
       }
     });
   }
@@ -300,7 +344,7 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
    * check non-ascii (127+) chars are supported in skip messaged
    */
   @Test
-  @EnvTestTagsRequired(tags = {}, skipOnFlavors = {IronPythonSdkFlavor.class})
+  @EnvTestTagsRequired(tags = {}, skipOnFlavors = {})
   public void testNonAsciiMessage() {
 
     runPythonTest(new PyUnitTestProcessWithConsoleTestTask("testRunner/env/unit/nonAscii", "test_test.py") {
@@ -314,11 +358,13 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
 
         runner.getFormattedTestTree();
         assertEquals("Skipped test with non-ascii message broke tree",
-                     "Test tree:\n" +
-                     "[root](~)\n" +
-                     ".test_test(~)\n" +
-                     "..TestCase(~)\n" +
-                     "...test(~)\n", runner.getFormattedTestTree());
+                     """
+                       Test tree:
+                       [root](~)
+                       .test_test(~)
+                       ..TestCase(~)
+                       ...test(~)
+                       """, runner.getFormattedTestTree());
         assertThat(stdout)
           .describedAs("non-ascii char broken in output")
           .contains("ошибка");
@@ -331,13 +377,7 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
   @Test
   @EnvTestTagsRequired(tags = "python3")
   public void testSubTestError() {
-    runPythonTest(new PyUnitTestProcessWithConsoleTestTask("testRunner/env/unit/subtestError", "test_test.py") {
-
-      @NotNull
-      @Override
-      protected PyUnitTestProcessRunner createProcessRunner() {
-        return new PyUnitTestProcessRunner(toFullPath(getMyScriptName()), 1);
-      }
+    runPythonTest(new PyUnitTestProcessWithConsoleTestTask("testRunner/env/unit/subtestError", "test_test.py", true, 1) {
 
       @Override
       protected void checkTestResults(@NotNull final PyUnitTestProcessRunner runner,
@@ -345,12 +385,14 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
                                       @NotNull final String stderr,
                                       @NotNull final String all, int exitCode) {
         final String formattedTestTree = runner.getFormattedTestTree();
-        assertEquals("Bad tree:" + formattedTestTree, "Test tree:\n" +
-                                                      "[root](-)\n" +
-                                                      ".test_test(-)\n" +
-                                                      "..TestThis(-)\n" +
-                                                      "...test_this(-)\n" +
-                                                      "....[test](-)\n", formattedTestTree);
+        assertEquals("Bad tree:" + formattedTestTree, """
+          Test tree:
+          [root](-)
+          .test_test(-)
+          ..TestThis(-)
+          ...test_this(-)
+          ....[test](-)
+          """, formattedTestTree);
       }
     });
   }
@@ -360,21 +402,14 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
   @Test
   @EnvTestTagsRequired(tags = "python3")
   public void testSubTestAssertEqualsError() {
-    runPythonTest(new PyUnitTestProcessWithConsoleTestTask("testRunner/env/unit/subtestError", "test_assert_test.py") {
-
-      @NotNull
-      @Override
-      protected PyUnitTestProcessRunner createProcessRunner() {
-        return new PyUnitTestProcessRunner(toFullPath(getMyScriptName()), 0);
-      }
+    runPythonTest(new PyUnitTestProcessWithConsoleTestTask("testRunner/env/unit/subtestError", "test_assert_test.py", true) {
 
       @Override
       protected void checkTestResults(@NotNull final PyUnitTestProcessRunner runner,
                                       @NotNull final String stdout,
                                       @NotNull final String stderr,
                                       @NotNull final String all, int exitCode) {
-        final MockPrinter printer = new MockPrinter();
-        runner.findTestByName("[test]").printOn(printer);
+        var printer = MockPrinter.fillPrinter(runner.findTestByName("[test]"));
         assertThat(printer.getStdErr())
           .describedAs("Subtest assertEquals broken")
           .contains("AssertionError: 'D' != 'a'");
@@ -388,13 +423,7 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
   @EnvTestTagsRequired(tags = "python3")
   @Test
   public void testWithNamedSubTests() {
-    runPythonTest(new PyUnitTestProcessWithConsoleTestTask("testRunner/env/unit/withNamedSubtests", "test_test.py") {
-
-      @NotNull
-      @Override
-      protected PyUnitTestProcessRunner createProcessRunner() {
-        return new PyUnitTestProcessRunner(toFullPath(getMyScriptName()), 1);
-      }
+    runPythonTest(new PyUnitTestProcessWithConsoleTestTask("testRunner/env/unit/withNamedSubtests", "test_test.py", true, 1) {
 
       @Override
       protected void checkTestResults(@NotNull final PyUnitTestProcessRunner runner,
@@ -403,17 +432,19 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
                                       @NotNull final String all, int exitCode) {
         assertEquals(3, runner.getFailedTestsCount());
         assertEquals(6, runner.getAllTestsCount());
-        assertEquals("Test tree:\n" +
-                     "[root](-)\n" +
-                     ".test_test(-)\n" +
-                     "..NumbersTest(-)\n" +
-                     "...test_even (Test that numbers between 0 and 5 are all even_)(-)\n" +
-                     "....(i=0)(+)\n" +
-                     "....(i=1)(-)\n" +
-                     "....(i=2)(+)\n" +
-                     "....(i=3)(-)\n" +
-                     "....(i=4)(+)\n" +
-                     "....(i=5)(-)\n", runner.getFormattedTestTree());
+        assertEquals("""
+                       Test tree:
+                       [root](-)
+                       .test_test(-)
+                       ..NumbersTest(-)
+                       ...test_even (Test that numbers between 0 and 5 are all even_)(-)
+                       ....(i=0)(+)
+                       ....(i=1)(-)
+                       ....(i=2)(+)
+                       ....(i=3)(-)
+                       ....(i=4)(+)
+                       ....(i=5)(-)
+                       """, runner.getFormattedTestTree());
       }
     });
   }
@@ -425,34 +456,30 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
   @EnvTestTagsRequired(tags = "python3")
   @Test
   public void testDotsInSubtest() {
-    runPythonTest(new PyUnitTestProcessWithConsoleTestTask("testRunner/env/unit/subtestDots", "test_test.py") {
-
-      @NotNull
-      @Override
-      protected PyUnitTestProcessRunner createProcessRunner() {
-        return new PyUnitTestProcessRunner(toFullPath(getMyScriptName()), 1);
-      }
+    runPythonTest(new PyUnitTestProcessWithConsoleTestTask("testRunner/env/unit/subtestDots", "test_test.py", true, 1) {
 
       @Override
       protected void checkTestResults(@NotNull final PyUnitTestProcessRunner runner,
                                       @NotNull final String stdout,
                                       @NotNull final String stderr,
                                       @NotNull final String all, int exitCode) {
-        assertEquals("dots in subtest names broke output", "Test tree:\n" +
-                                                           "[root](-)\n" +
-                                                           ".test_test(-)\n" +
-                                                           "..SampleTest(-)\n" +
-                                                           "...test_sample(-)\n" +
-                                                           "....(i='0_0')(-)\n" +
-                                                           "....(i='1_1')(-)\n" +
-                                                           "....(i='2_2')(+)\n" +
-                                                           "....(i='3_3')(+)\n" +
-                                                           "....(i='4_4')(+)\n" +
-                                                           "....(i='5_5')(+)\n" +
-                                                           "....(i='6_6')(+)\n" +
-                                                           "....(i='7_7')(+)\n" +
-                                                           "....(i='8_8')(+)\n" +
-                                                           "....(i='9_9')(+)\n", runner.getFormattedTestTree());
+        assertEquals("dots in subtest names broke output", """
+          Test tree:
+          [root](-)
+          .test_test(-)
+          ..SampleTest(-)
+          ...test_sample(-)
+          ....(i='0_0')(-)
+          ....(i='1_1')(-)
+          ....(i='2_2')(+)
+          ....(i='3_3')(+)
+          ....(i='4_4')(+)
+          ....(i='5_5')(+)
+          ....(i='6_6')(+)
+          ....(i='7_7')(+)
+          ....(i='8_8')(+)
+          ....(i='9_9')(+)
+          """, runner.getFormattedTestTree());
       }
     });
   }
@@ -471,13 +498,15 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
                                       @NotNull final String stdout,
                                       @NotNull final String stderr,
                                       @NotNull final String all, int exitCode) {
-        assertEquals("Output tree broken for skipped exception thrown in setup method", "Test tree:\n" +
-                                                                                        "[root](~)\n" +
-                                                                                        ".test_test(~)\n" +
-                                                                                        "..TestSimple(~)\n" +
-                                                                                        "...setUpClass(~)\n" +
-                                                                                        "..TestSubSimple(~)\n" +
-                                                                                        "...setUpClass(~)\n",
+        assertEquals("Output tree broken for skipped exception thrown in setup method", """
+                       Test tree:
+                       [root](~)
+                       .test_test(~)
+                       ..TestSimple(~)
+                       ...setUpClass(~)
+                       ..TestSubSimple(~)
+                       ...setUpClass(~)
+                       """,
                      runner.getFormattedTestTree());
       }
     });
@@ -490,13 +519,7 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
   @Test
   @EnvTestTagsRequired(tags = "python3")
   public void testScriptWithHyphen() {
-    runPythonTest(new PyUnitTestProcessWithConsoleTestTask("testRunner/env/unit/withHyphen", "test-foobar.py") {
-
-      @NotNull
-      @Override
-      protected PyUnitTestProcessRunner createProcessRunner() {
-        return new PyUnitTestProcessRunner(toFullPath(getMyScriptName()), 1);
-      }
+    runPythonTest(new PyUnitTestProcessWithConsoleTestTask("testRunner/env/unit/withHyphen", "test-foobar.py", true, 1) {
 
       @Override
       protected void checkTestResults(@NotNull final PyUnitTestProcessRunner runner,
@@ -616,21 +639,23 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
                                       @NotNull String stdout,
                                       @NotNull String stderr,
                                       @NotNull String all, int exitCode) {
-        final String expectedResult = "Test tree:\n" +
-                                      "[root](-)\n" +
-                                      ".test_subtest(-)\n" +
-                                      "..SpamTest(-)\n" +
-                                      "...test_test(-)\n" +
-                                      "....(i=0)(-)\n" +
-                                      "....(i=1)(+)\n" +
-                                      "....(i=2)(-)\n" +
-                                      "....(i=3)(+)\n" +
-                                      "....(i=4)(-)\n" +
-                                      "....(i=5)(+)\n" +
-                                      "....(i=6)(-)\n" +
-                                      "....(i=7)(+)\n" +
-                                      "....(i=8)(-)\n" +
-                                      "....(i=9)(+)\n";
+        final String expectedResult = """
+          Test tree:
+          [root](-)
+          .test_subtest(-)
+          ..SpamTest(-)
+          ...test_test(-)
+          ....(i=0)(-)
+          ....(i=1)(+)
+          ....(i=2)(-)
+          ....(i=3)(+)
+          ....(i=4)(-)
+          ....(i=5)(+)
+          ....(i=6)(-)
+          ....(i=7)(+)
+          ....(i=8)(-)
+          ....(i=9)(+)
+          """;
         final String tree = runner.getFormattedTestTree();
         assertEquals("Bad tree:" + tree + ". \nStdout:" + stdout + "\n. Stderr: " + stderr, expectedResult, tree);
       }
@@ -655,8 +680,8 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
   // PY-24407
   @Test
   public void testWorkingDirectoryDependsOnRelativeImport() {
-    runPythonTest(new CreateConfigurationTestTask<PyUnitTestConfiguration>(PythonTestConfigurationsModel.getPythonsUnittestName(),
-                                                                           PyUnitTestConfiguration.class) {
+    runPythonTest(new CreateConfigurationTestTask<>(PythonTestConfigurationType.getInstance().getUnitTestFactory().getName(),
+                                                    PyUnitTestConfiguration.class) {
       @NotNull
       @Override
       protected List<PsiElement> getPsiElementsToRightClickOn() {
@@ -821,7 +846,7 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
   public void testConfigurationProducerOnDirectory() {
     runPythonTest(
       new CreateConfigurationByFileTask.CreateConfigurationTestAndRenameFolderTask<>(
-        PythonTestConfigurationsModel.getPythonsUnittestName(),
+        PythonTestConfigurationType.getInstance().getUnitTestFactory().getName(),
         PyUnitTestConfiguration.class));
   }
 
@@ -829,7 +854,7 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
   @Test
   public void testConfigurationProducer() {
     runPythonTest(
-      new CreateConfigurationByFileTask<>(PythonTestConfigurationsModel.getPythonsUnittestName(), PyUnitTestConfiguration.class));
+      new CreateConfigurationByFileTask<>(new PyUnitTestFactory(PythonTestConfigurationType.getInstance()).getName(), PyUnitTestConfiguration.class));
   }
 
   /**
@@ -838,14 +863,14 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
   @Test
   public void testConfigurationProducerObeysDefaultDir() {
     runPythonTest(
-      new CreateConfigurationByFileTask<PyUnitTestConfiguration>(PythonTestConfigurationsModel.getPythonsUnittestName(),
-                                                                 PyUnitTestConfiguration.class) {
+      new CreateConfigurationByFileTask<>(new PyUnitTestFactory(PythonTestConfigurationType.getInstance()).getName(),
+                                          PyUnitTestConfiguration.class) {
         private static final String SOME_RANDOM_DIR = "//some/random/ddir";
 
         @Override
         public void runTestOn(@NotNull final String sdkHome, @Nullable Sdk existingSdk) throws InvalidSdkException {
           // Set default working directory to some random location before actual exection
-          final PyUnitTestConfiguration templateConfiguration = getTemplateConfiguration(new PyUnitTestFactory());
+          final PyUnitTestConfiguration templateConfiguration = getTemplateConfiguration(new PyUnitTestFactory(PythonTestConfigurationType.getInstance()));
           templateConfiguration.setWorkingDirectory(SOME_RANDOM_DIR);
           super.runTestOn(sdkHome, existingSdk);
           templateConfiguration.setWorkingDirectory("");
@@ -872,13 +897,25 @@ public final class PythonUnitTestingTest extends PythonUnitTestingLikeTest<PyUni
     PyUnitTestProcessWithConsoleTestTask(@NotNull String relativePathToTestData,
                                          @NotNull String scriptName,
                                          int rerunFailedTests) {
-      super(relativePathToTestData, scriptName, rerunFailedTests, PythonUnitTestingTest.this::createTestRunner);
+      super(relativePathToTestData, scriptName, PythonUnitTestingTest.this::createTestRunner, false, rerunFailedTests);
     }
 
-    @NotNull
+    PyUnitTestProcessWithConsoleTestTask(@NotNull String relativePathToTestData,
+                                         @NotNull String scriptName,
+                                         boolean isToFullPath,
+                                         int rerunFailedTests) {
+      super(relativePathToTestData, scriptName, PythonUnitTestingTest.this::createTestRunner, isToFullPath, rerunFailedTests);
+    }
+
+    PyUnitTestProcessWithConsoleTestTask(@NotNull String relativePathToTestData,
+                                         @NotNull String scriptName,
+                                         boolean isToFullPath) {
+      super(relativePathToTestData, scriptName, PythonUnitTestingTest.this::createTestRunner, isToFullPath);
+    }
+
     @Override
-    public Iterable<Class<?>> getClassesToEnableDebug() {
-      return Collections.singletonList(GeneralIdBasedToSMTRunnerEventsConvertor.class);
+    public @NotNull Collection<Class<?>> getClassesToEnableDebug() {
+      return List.of(GeneralIdBasedToSMTRunnerEventsConvertor.class);
     }
   }
 
