@@ -1,73 +1,129 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.updater;
 
-import org.apache.log4j.FileAppender;
-import org.apache.log4j.Level;
-import org.apache.log4j.Logger;
-import org.apache.log4j.PatternLayout;
-import org.apache.log4j.spi.NOPLogger;
-import org.apache.log4j.spi.NOPLoggerRepository;
+import org.jetbrains.annotations.Nullable;
 
-import java.io.*;
+import java.io.BufferedOutputStream;
+import java.io.File;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
+import java.io.PrintWriter;
+import java.io.StringWriter;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
-import java.nio.file.*;
-import java.util.*;
+import java.nio.file.Files;
+import java.nio.file.InvalidPathException;
+import java.nio.file.LinkOption;
+import java.nio.file.Path;
+import java.nio.file.StandardOpenOption;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
+import java.util.StringTokenizer;
+import java.util.logging.FileHandler;
+import java.util.logging.Formatter;
+import java.util.logging.Level;
+import java.util.logging.LogRecord;
+import java.util.logging.Logger;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipFile;
 import java.util.zip.ZipInputStream;
 
-public class Runner {
+public final class Runner {
   private static final String PATCH_FILE_NAME = "patch-file.zip";
+  private static final String LOG_FILE_NAME = "idea_updater.log";
   private static final String ERROR_LOG_FILE_NAME = "idea_updater_error.log";  // must be equal to UpdateCheckerComponent.ERROR_LOG_FILE_NAME
 
-  private static Logger logger = null;
   private static String logPath = null;
   private static boolean ourCaseSensitiveFs;
 
-  public static Logger logger() {
-    return logger;
-  }
+  static final Logger LOG = createLogger();
 
   public static boolean isCaseSensitiveFs() {
     return ourCaseSensitiveFs;
   }
 
+  @SuppressWarnings("UseOfSystemOutOrSystemErr")
   public static void main(String[] args) {
-    initLogger();
     try {
-      _main(args);
+      initLogger();
+
+      List<String> effectiveArgs = new ArrayList<>();
+      for (String arg : args) {
+        if (arg.startsWith("@")) {
+          effectiveArgs.addAll(Files.readAllLines(Path.of(arg.substring(1))));
+        }
+        else {
+          effectiveArgs.add(arg);
+        }
+      }
+      @SuppressWarnings({"SSBasedInspection", "RedundantSuppression"})
+      var array = effectiveArgs.toArray(new String[0]);
+      _main(array);
     }
     catch (Throwable t) {
-      logger().error("internal error", t);
+      LOG.log(Level.SEVERE, "internal error", t);
+      t.printStackTrace(System.err);
       System.exit(2);
     }
   }
 
-  private static void initLogger() {
-    String logDirectory = Utils.findDirectory(1_000_000L);
-    logPath = new File(logDirectory, "idea_updater.log").getAbsolutePath();
+  private static Logger createLogger() {
+    System.setProperty("java.util.logging.config.class", Object.class.getName());
+    Logger logger = Logger.getLogger("com.intellij.updater");
+    logger.setLevel(Level.OFF);
+    return logger;
+  }
 
-    FileAppender update = new FileAppender();
-    update.setFile(logPath);
-    update.setLayout(new PatternLayout("%d{dd/MM HH:mm:ss} %-5p %C{1}.%M - %m%n"));
-    update.setThreshold(Level.ALL);
-    update.setAppend(true);
-    update.activateOptions();
+  private static void initLogger() throws IOException {
+    System.setProperty("java.util.logging.config.class", Object.class.getName());
 
-    FileAppender updateError = new FileAppender();
-    updateError.setFile(new File(logDirectory, ERROR_LOG_FILE_NAME).getAbsolutePath());
-    updateError.setLayout(new PatternLayout("%d{dd/MM HH:mm:ss} %-5p %C{1}.%M - %m%n"));
-    updateError.setThreshold(Level.ERROR);
-    updateError.setAppend(false);
-    updateError.activateOptions();
+    String dirPath = System.getProperty("idea.updater.log", System.getProperty("java.io.tmpdir", System.getProperty("user.home", ".")));
+    Path logDir = Path.of(dirPath).toAbsolutePath().normalize();
+    logPath = logDir.resolve(LOG_FILE_NAME).toString();
+    String errorLogPath = logDir.resolve(ERROR_LOG_FILE_NAME).toString();
 
-    logger = Logger.getLogger("com.intellij.updater");
-    logger.addAppender(updateError);
-    logger.addAppender(update);
-    logger.setLevel(Level.ALL);
-    logger.info("--- Updater started ---");
+    Formatter formatter = new Formatter() {
+      @Override
+      public String format(LogRecord record) {
+        Level level = record.getLevel();
+        String levelName = level == Level.SEVERE ? "ERROR" : level == Level.WARNING ? "WARN" : "INFO";
+
+        String className = record.getSourceClassName();
+        if (className != null) {
+          className = className.substring(className.lastIndexOf('.') + 1);
+        }
+
+        String stacktrace = "";
+        if (record.getThrown() != null) {
+          StringWriter writer = new StringWriter().append(System.lineSeparator());
+          record.getThrown().printStackTrace(new PrintWriter(writer));
+          stacktrace = writer.getBuffer().toString();
+        }
+
+        return String.format("%1$td/%1$tm %1$tH:%1$tM:%1$tS %2$-5s %3$s.%4$s - %5$s%6$s%n",
+                             record.getMillis(), levelName, className, record.getSourceMethodName(), record.getMessage(), stacktrace);
+      }
+    };
+
+    var cumulativeLog = new FileHandler(logPath, 0L, 1, true);
+    cumulativeLog.setEncoding("UTF-8");
+    cumulativeLog.setLevel(Level.ALL);
+    cumulativeLog.setFormatter(formatter);
+
+    var errorLog = new FileHandler(errorLogPath, 0L, 1, false);
+    cumulativeLog.setEncoding("UTF-8");
+    errorLog.setLevel(Level.SEVERE);
+    errorLog.setFormatter(formatter);
+
+    LOG.addHandler(cumulativeLog);
+    LOG.addHandler(errorLog);
+    LOG.setLevel(Level.ALL);
+    LOG.info("--- Updater started ---");
   }
 
   private static void _main(String[] args) {
@@ -75,6 +131,9 @@ public class Runner {
     if (jarFile == null) {
       jarFile = resolveJarFile();
     }
+
+    LOG.info("args: " + Arrays.toString(args));
+    LOG.info(".jar: " + jarFile);
 
     if (args.length >= 6 && "create".equals(args[0])) {
       String oldVersionDesc = args[1];
@@ -85,9 +144,9 @@ public class Runner {
 
       checkCaseSensitivity(newFolder);
 
-      boolean binary = hasArgument(args, "zip_as_binary");
+      LOG.info("case-sensitive: " + ourCaseSensitiveFs);
+
       boolean strict = hasArgument(args, "strict");
-      boolean normalized = hasArgument(args, "normalized");
 
       String root = getArgument(args, "root");
       if (root == null) {
@@ -98,10 +157,15 @@ public class Runner {
       }
 
       List<String> ignoredFiles = extractArguments(args, "ignored");
+      List<String> strictFiles = extractArguments(args, "strictfiles");
       List<String> criticalFiles = extractArguments(args, "critical");
       List<String> optionalFiles = extractArguments(args, "optional");
       List<String> deleteFiles = extractArguments(args, "delete");
-      Map<String, String> warnings = buildWarningMap(extractArguments(args, "warning"));
+
+      String timeoutStr = getArgument(args, "timeout");
+      int timeout = timeoutStr != null ? Integer.parseInt(timeoutStr) : 0;
+
+      String cacheDir = getArgument(args, "cache-dir");
 
       PatchSpec spec = new PatchSpec()
         .setOldVersionDescription(oldVersionDesc)
@@ -112,49 +176,41 @@ public class Runner {
         .setPatchFile(patchFile)
         .setJarFile(jarFile)
         .setStrict(strict)
-        .setBinary(binary)
-        .setNormalized(normalized)
         .setIgnoredFiles(ignoredFiles)
         .setCriticalFiles(criticalFiles)
+        .setStrictFiles(strictFiles)
         .setOptionalFiles(optionalFiles)
         .setDeleteFiles(deleteFiles)
-        .setWarnings(warnings);
+        .setTimeout(timeout);
 
-      boolean success = create(spec);
+      boolean success = create(spec, cacheDir != null ? Path.of(cacheDir) : null);
       System.exit(success ? 0 : 1);
     }
     else if (args.length >= 2 && ("install".equals(args[0]) || "apply".equals(args[0])) ||
              args.length >= 3 && ("batch-install".equals(args[0]))) {
+      LOG.info("JRE: " + System.getProperty("java.runtime.version", "unknown") + " @ " + System.getProperty("java.home"));
+      LOG.info("user.language=" + System.getProperty("user.language") + " user.country=" + System.getProperty("user.country"));
+
       String destPath = args[1];
 
-      Path destDirectory = Paths.get(destPath);
+      Path destDirectory = Path.of(destPath);
       try {
         destDirectory = destDirectory.toRealPath();
       }
       catch (InvalidPathException | IOException e) {
-        logger().error(e);
+        LOG.log(Level.SEVERE, destPath, e);
       }
 
       checkCaseSensitivity(destDirectory.toString());
 
-      logger().info("args: " + Arrays.toString(args));
-      logger().info("destination: " + destPath + " (" + destDirectory + "), case-sensitive: " + ourCaseSensitiveFs);
+      LOG.info("destination: " + destPath + " (" + destDirectory + "), case-sensitive: " + ourCaseSensitiveFs);
 
-      UpdaterUI ui;
-      if ("install".equals(args[0]) || "batch-install".equals(args[0])) {
-        ui = new SwingUpdaterUI();
-      }
-      else if (hasArgument(args, "toolbox-ui")) {
-        ui = new ToolboxUpdaterUI();
-      }
-      else {
-        ui = new ConsoleUpdaterUI();
-      }
+      var ui = "apply".equals(args[0]) ? new ConsoleUpdaterUI(hasArgument(args, "force-replace")) : SwingUpdaterUI.createUI();
 
       boolean backup = !hasArgument(args, "no-backup");
       boolean success;
       if (!Files.isDirectory(destDirectory, LinkOption.NOFOLLOW_LINKS)) {
-        ui.showError("Invalid target directory: " + destPath);
+        ui.showError(UpdaterUI.message("invalid.target.directory", destPath));
         success = false;
       }
       else if (!"batch-install".equals(args[0])) {
@@ -168,6 +224,7 @@ public class Runner {
     }
     else {
       printUsage();
+      System.exit(1);
     }
   }
 
@@ -182,26 +239,13 @@ public class Runner {
   }
 
   private static boolean hasArgument(String[] args, String name) {
-    return Arrays.asList(args).contains("--" + name);
+    return List.of(args).contains("--" + name);
   }
 
   public static void checkCaseSensitivity(String path) {
     boolean orig = new File(path).exists();
     ourCaseSensitiveFs = orig != new File(path.toUpperCase(Locale.ENGLISH)).exists() ||
                          orig != new File(path.toLowerCase(Locale.ENGLISH)).exists();
-  }
-
-  private static Map<String, String> buildWarningMap(List<String> warnings) {
-    Map<String, String> map = new HashMap<>();
-    for (String warning : warnings) {
-      int ix = warning.indexOf(":");
-      if (ix != -1) {
-        String path = warning.substring(0, ix);
-        String message = warning.substring(ix + 1).replace("\\n","\n");
-        map.put(path, message);
-      }
-    }
-    return map;
   }
 
   public static List<String> extractArguments(String[] args, String paramName) {
@@ -234,43 +278,41 @@ public class Runner {
       "  <file_set>: Can be one of:\n" +
       "    ignored: The set of files that will not be included in the patch.\n" +
       "    critical: Fully included in the patch, so they can be replaced at the destination even if they have changed.\n" +
+      "    strictfiles: A set of files for which conflicts can't be ignored (a mismatch forbids patch installation).\n" +
       "    optional: A set of files that is okay for them not to exist when applying the patch.\n" +
       "    delete: A set of regular expressions for paths that is safe to delete without user confirmation.\n" +
       "  <flags>: Can be:\n" +
-      "    --zip_as_binary: Zip and jar files will be treated as binary files and not inspected internally.\n" +
-      "    --strict: The created patch will contain extra information to fully validate an installation. A strict\n" +
-      "              patch will only be applied if it is guaranteed that the patched version will match exactly\n" +
-      "              the source of the patch. This means that unexpected files will be deleted and all existing files\n" +
-      "              will be validated\n" +
+      "    --strict:     The created patch will contain extra information to fully validate an installation. A strict\n" +
+      "                  patch will only be applied if it is guaranteed that the patched version will match exactly\n" +
+      "                  the source of the patch. This means that unexpected files will be deleted and all existing files\n" +
+      "                  will be validated\n" +
+      "    --cache-dir=<dir>: Sets directory where diffs can be cached.\n" +
+      "                  Useful when building several patches on folders with common files.\n" +
       "    --root=<dir>: Sets dir as the root directory of the patch. The root directory is the directory where the patch should be\n" +
       "                  applied to. For example on Mac, you can diff the two .app folders and set Contents as the root.\n" +
       "                  The root directory is relative to <old_folder> and uses forwards-slashes as separators.\n" +
-      "    --normalized: This creates a normalized patch. This flag only makes sense in addition to --zip_as_binary\n" +
-      "                  A normalized patch must be used to move from an installation that was patched\n" +
-      "                  in a non-binary way to a fully binary patch. This will yield a larger patch, but\n" +
-      "                  the generated patch can be applied on versions where non-binary patches have been applied to and it\n" +
-      "                  guarantees that the patched version will match exactly the original one.\n" +
+      "    --timeout=<T> A time budget for building a 'bsdiff' patch between a pair of files, in seconds.\n" +
+      "                  If exceeded, the new version is included into the patch as a whole.\n" +
       "  <folder>: The folder where product was installed. For example: c:/Program Files/JetBrains/IntelliJ IDEA 2017.3.4");
   }
 
-  private static boolean create(PatchSpec spec) {
-    ConsoleUpdaterUI ui = new ConsoleUpdaterUI();
+  @SuppressWarnings("UseOfSystemOutOrSystemErr")
+  private static boolean create(PatchSpec spec, Path cacheDir) {
     boolean success = false;
 
     try {
       File tempPatchFile = Utils.getTempFile("patch");
-      PatchFileCreator.create(spec, tempPatchFile, ui);
+      PatchFileCreator.create(spec, tempPatchFile, cacheDir);
 
-      logger().info("Packing JAR file: " + spec.getPatchFile() );
-      ui.startProcess("Packing JAR file '" + spec.getPatchFile() + "'...");
+      LOG.info("Packing JAR file: " + spec.getPatchFile());
+      System.out.println("Packing JAR file '" + spec.getPatchFile() + "'...");
 
-      try (ZipOutputWrapper out = new ZipOutputWrapper(new FileOutputStream(spec.getPatchFile()));
-           ZipInputStream in = new ZipInputStream(new FileInputStream(spec.getJarFile()))) {
+      try (ZipOutputWrapper out = new ZipOutputWrapper(Files.newOutputStream(Path.of(spec.getPatchFile()), StandardOpenOption.CREATE_NEW));
+           ZipInputStream in = new ZipInputStream(Files.newInputStream(Path.of(spec.getJarFile())))) {
         ZipEntry e;
         while ((e = in.getNextEntry()) != null) {
           out.zipEntry(e, in);
         }
-
         out.zipFile(PATCH_FILE_NAME, tempPatchFile);
         out.finish();
       }
@@ -278,34 +320,23 @@ public class Runner {
       success = true;
     }
     catch (Throwable t) {
-      logger().error("create failed", t);
-      ui.showError(printStackTrace(t));
+      LOG.log(Level.SEVERE, "create failed", t);
+      t.printStackTrace(System.err);
     }
     finally {
       try {
-        cleanup(ui);
+        System.out.println("Cleaning up...");
+        LOG.info("Cleaning up...");
+        Utils.cleanup();
       }
       catch (Throwable t) {
         success = false;
-        logger().error("cleanup failed", t);
-        ui.showError(printStackTrace(t));
+        LOG.log(Level.SEVERE, "cleanup failed", t);
+        t.printStackTrace(System.err);
       }
     }
 
     return success;
-  }
-
-  private static String printStackTrace(Throwable t) {
-    StringWriter writer = new StringWriter();
-    t.printStackTrace(new PrintWriter(writer));
-    return writer.toString();
-  }
-
-  private static void cleanup(UpdaterUI ui) throws IOException {
-    logger().info("Cleaning up...");
-    ui.startProcess("Cleaning up...");
-    ui.setProgressIndeterminate();
-    Utils.cleanup();
   }
 
   private static boolean install(String patch, Path dest, UpdaterUI ui, boolean doBackup) {
@@ -317,12 +348,12 @@ public class Runner {
       try {
         File patchFile = Utils.getTempFile("patch");
 
-        logger().info("Extracting patch file...");
-        ui.startProcess("Extracting patch file...");
+        LOG.info("Extracting patch file...");
+        ui.startProcess(UpdaterUI.message("extracting.patch.file"));
         ui.setProgressIndeterminate();
         try (ZipFile zipFile = new ZipFile(patch);
              InputStream in = Utils.getEntryInputStream(zipFile, PATCH_FILE_NAME);
-             OutputStream out = new BufferedOutputStream(new FileOutputStream(patchFile))) {
+             OutputStream out = new BufferedOutputStream(Files.newOutputStream(patchFile.toPath()))) {
           Utils.copyStream(in, out);
         }
 
@@ -339,17 +370,20 @@ public class Runner {
         }
 
         applicationResult = PatchFileCreator.apply(preparationResult, resolutions, backupDir, ui);
+
+        if (applicationResult.applied) {
+          postUpdateTasks(ui, dest, preparationResult.patch.getNewBuild());
+        }
       }
       catch (OperationCancelledException e) {
-        logger().warn("cancelled", e);
+        LOG.log(Level.WARNING, "cancelled", e);
         return false;
       }
       catch (Throwable t) {
-        logger().error("prepare failed", t);
-        String message = "An error occurred when preparing the patch:\n" +
-                         t.getClass().getSimpleName() + ": " + t.getMessage() + "\n\n" +
-                         ui.bold("No files were changed. Please retry applying the patch.") + "\n\n" +
-                         "More details in the log: " + logPath;
+        LOG.log(Level.SEVERE, "prepare failed", t);
+        String message = UpdaterUI.message("prepare.failed", t.getClass().getSimpleName(), t.getMessage()) + "\n\n" +
+                         ui.bold(UpdaterUI.message("nothing.changed.retry")) + "\n\n" +
+                         UpdaterUI.message("see.log", logPath);
         ui.showError(message);
         return false;
       }
@@ -359,18 +393,17 @@ public class Runner {
         Throwable error = applicationResult.error;
 
         if (error != null) {
-          String message = "An error occurred when applying the patch:\n" +
-                           error.getClass().getSimpleName() + ": " + error.getMessage() + "\n\n";
+          String message = UpdaterUI.message("apply.failed", error.getClass().getSimpleName(), error.getMessage()) + "\n\n";
           if (appliedActions.isEmpty()) {
-            message += ui.bold("No files were changed. Please retry applying the patch.");
+            message += ui.bold(UpdaterUI.message("nothing.changed.retry"));
           }
           else if (backupDir == null) {
-            message += ui.bold("Files may be corrupted. Please reinstall the IDE.");
+            message += ui.bold(UpdaterUI.message("corrupted.reinstall"));
           }
           else {
-            message += ui.bold("Files may be corrupted. The patch will attempt to revert the changes.");
+            message += ui.bold(UpdaterUI.message("corrupted.reverting"));
           }
-          message += "\n\nMore details in the log: " + logPath;
+          message += "\n\n" + UpdaterUI.message("see.log", logPath);
           ui.showError(message);
         }
 
@@ -379,11 +412,10 @@ public class Runner {
             PatchFileCreator.revert(preparationResult, appliedActions, backupDir, ui);
           }
           catch (Throwable t) {
-            logger().error("revert failed", t);
-            String message = "An error occurred when reverting the patch:\n" +
-                             t.getClass().getSimpleName() + ": " + t.getMessage() + "\n\n" +
-                             ui.bold("Files may be corrupted. Please reinstall the IDE.") + "\n\n" +
-                             "More details in the log: " + logPath;
+            LOG.log(Level.SEVERE, "revert failed", t);
+            String message = UpdaterUI.message("revert.failed", t.getClass().getSimpleName(), t.getMessage()) + "\n\n" +
+                             ui.bold(UpdaterUI.message("corrupted.reinstall")) + "\n\n" +
+                             UpdaterUI.message("see.log", logPath);
             ui.showError(message);
           }
         }
@@ -394,10 +426,9 @@ public class Runner {
     finally {
       try {
         cleanup(ui);
-        refreshApplicationIcon(dest.toString());
       }
       catch (Throwable t) {
-        logger().warn("cleanup failed", t);
+        LOG.log(Level.WARNING, "cleanup failed", t);
       }
     }
   }
@@ -410,17 +441,17 @@ public class Runner {
 
       String jarName = null;
       try {
-        logger().info("Extracting patch files...");
-        ui.startProcess("Extracting patch files...");
+        LOG.info("Extracting patch files...");
+        ui.startProcess(UpdaterUI.message("extracting.patch.files"));
         for (int i = 0; i < patches.length; i++) {
           jarName = new File(patches[i]).getName();
-          logger().info("Unpacking " + jarName);
+          LOG.info("Unpacking " + jarName);
           ui.setProgress(100 * i / patches.length);
           File patchFile = Utils.getTempFile("patch" + i);
           patchFiles.add(patchFile);
           try (ZipFile zipFile = new ZipFile(patches[i]);
                InputStream in = Utils.getEntryInputStream(zipFile, PATCH_FILE_NAME);
-               OutputStream out = new BufferedOutputStream(new FileOutputStream(patchFile))) {
+               OutputStream out = new BufferedOutputStream(Files.newOutputStream(patchFile.toPath()))) {
             Utils.copyStream(in, out);
           }
           ui.checkCancelled();
@@ -431,22 +462,22 @@ public class Runner {
           backupDir = Utils.getTempFile("backup");
           if (!backupDir.mkdir()) throw new IOException("Cannot create a backup directory: " + backupDir);
 
-          logger().info("Backing up files...");
-          ui.startProcess("Backing up files...");
+          LOG.info("Backing up files...");
+          ui.startProcess(UpdaterUI.message("backing.up.files"));
           ui.setProgressIndeterminate();
           Utils.copyDirectory(destDir.toPath(), backupDir.toPath());
         }
       }
       catch (OperationCancelledException e) {
-        logger().warn("cancelled", e);
+        LOG.log(Level.WARNING, "cancelled", e);
         return false;
       }
       catch (Throwable t) {
-        logger().error("prepare failed", t);
-        String message = "An error occurred when " + (jarName != null ? "extracting " + jarName : "preparing the patch") + ":\n" +
-                         t.getClass().getSimpleName() + ": " + t.getMessage() + "\n\n" +
-                         ui.bold("No files were changed. Please retry applying the patch.") + "\n\n" +
-                         "More details in the log: " + logPath;
+        LOG.log(Level.SEVERE, "prepare failed", t);
+        String message = (jarName != null ? UpdaterUI.message("extract.failed", jarName, t.getClass().getSimpleName(), t.getMessage())
+                                          : UpdaterUI.message("prepare.failed", t.getClass().getSimpleName(), t.getMessage())) + "\n\n" +
+                         ui.bold(UpdaterUI.message("nothing.changed.retry")) + "\n\n" +
+                         UpdaterUI.message("see.log", logPath);
         ui.showError(message);
         return false;
       }
@@ -454,6 +485,7 @@ public class Runner {
       boolean completed = false, needRestore = false;
       Throwable error = null;
       try {
+        var newVersion = (String)null;
         for (File patchFile : patchFiles) {
           PatchFileCreator.PreparationResult preparationResult = PatchFileCreator.prepareAndValidate(patchFile, destDir, ui);
 
@@ -465,58 +497,58 @@ public class Runner {
             error = applicationResult.error;
             throw new OperationCancelledException();
           }
+          newVersion = preparationResult.patch.getNewBuild();
         }
         completed = true;
+        postUpdateTasks(ui, dest, newVersion);
       }
       catch (OperationCancelledException e) {
-        logger().warn("cancelled", e);
+        LOG.log(Level.WARNING, "cancelled", e);
       }
       catch (Throwable t) {
-        logger().error("batch failed", t);
+        LOG.log(Level.SEVERE, "batch failed", t);
         error = t;
       }
 
       if (error != null) {
-        String message = "An error occurred when applying the patch:\n" +
-                         error.getClass().getSimpleName() + ": " + error.getMessage() + "\n\n";
+        String message = UpdaterUI.message("apply.failed", error.getClass().getSimpleName(), error.getMessage()) + "\n\n";
         if (!needRestore) {
-          message += ui.bold("No files were changed. Please retry applying the patches.");
+          message += ui.bold(UpdaterUI.message("nothing.changed.retry"));
         }
         else if (backupDir == null) {
-          message += ui.bold("Files may be corrupted. Please reinstall the IDE.");
+          message += ui.bold(UpdaterUI.message("corrupted.reinstall"));
         }
         else {
-          message += ui.bold("Files may be corrupted. The patch will attempt to revert the changes.");
+          message += ui.bold(UpdaterUI.message("corrupted.reverting"));
         }
-        message += "\n\nMore details in the log: " + logPath;
+        message += "\n\n" + UpdaterUI.message("see.log", logPath);
         ui.showError(message);
       }
 
       ui.setDescription("");
 
       if (!completed && needRestore && backupDir != null) {
-        logger().info("Reverting...");
-        ui.startProcess("Reverting...");
+        LOG.info("Reverting...");
+        ui.startProcess(UpdaterUI.message("reverting"));
         ui.setProgressIndeterminate();
 
         try {
           Utils.delete(destDir);
           try {
-            logger().info("move: " + backupDir + " -> " + destDir);
+            LOG.info("move: " + backupDir + " -> " + destDir);
             Files.move(backupDir.toPath(), destDir.toPath());
           }
           catch (IOException e) {
-            logger().error("move failed", e);
+            LOG.log(Level.SEVERE, "move failed", e);
             Utils.delete(destDir);
             Utils.copyDirectory(backupDir.toPath(), destDir.toPath());
           }
         }
         catch (Throwable t) {
-          logger().error("revert failed", t);
-          String message = "An error occurred when reverting the patch:\n" +
-                           t.getClass().getSimpleName() + ": " + t.getMessage() + "\n\n" +
-                           ui.bold("Files may be corrupted. Please reinstall the IDE.") + "\n\n" +
-                           "More details in the log: " + logPath;
+          LOG.log(Level.SEVERE, "revert failed", t);
+          String message = UpdaterUI.message("revert.failed", t.getClass().getSimpleName(), t.getMessage()) + "\n\n" +
+                           ui.bold(UpdaterUI.message("corrupted.reinstall")) + "\n\n" +
+                           UpdaterUI.message("see.log", logPath);
           ui.showError(message);
         }
       }
@@ -526,54 +558,69 @@ public class Runner {
     finally {
       try {
         cleanup(ui);
-        refreshApplicationIcon(dest.toString());
       }
       catch (Throwable t) {
-        logger().warn("cleanup failed", t);
+        LOG.log(Level.WARNING, "cleanup failed", t);
       }
     }
   }
 
-  private static Map<String, ValidationResult.Option> askForResolutions(
-    List<ValidationResult> problems, UpdaterUI ui
-  ) throws OperationCancelledException {
-    if (problems.isEmpty()) return Collections.emptyMap();
-    logger().warn("conflicts:");
+  private static Map<String, ValidationResult.Option> askForResolutions(List<ValidationResult> problems, UpdaterUI ui) throws OperationCancelledException {
+    if (problems.isEmpty()) return Map.of();
+    LOG.warning("conflicts:");
     for (ValidationResult problem : problems) {
-      logger().warn("  " + problem.action.name() + " @ " + problem.path + ": " + problem.message);
+      String record = "  " + problem.action.name() + ' ' + problem.path + ": " + problem.message;
+      if (!problem.details.isEmpty()) record += " (" + problem.details + ')';
+      LOG.warning(record);
     }
     Map<String, ValidationResult.Option> resolutions = ui.askUser(problems);
-    logger().warn("resolutions:");
+    LOG.warning("resolutions:");
     for (Map.Entry<String, ValidationResult.Option> entry : resolutions.entrySet()) {
-      logger().warn("  " + entry.getKey() + ": " + entry.getValue());
+      LOG.warning("  " + entry.getKey() + ": " + entry.getValue());
     }
     return resolutions;
   }
 
-  private static void refreshApplicationIcon(String destPath) {
+  private static void cleanup(UpdaterUI ui) throws IOException {
+    ui.startProcess(UpdaterUI.message("cleaning.up"));
+    ui.setProgressIndeterminate();
+    LOG.info("Cleaning up...");
+    Utils.cleanup();
+  }
+
+  private static void postUpdateTasks(UpdaterUI ui, Path targetDir, @Nullable String newVersion) {
+    LOG.info("Running post-update tasks (ver=" + newVersion + " mac=" + Utils.IS_MAC + " win=" + Utils.IS_WINDOWS + ')');
     if (Utils.IS_MAC) {
-      try {
-        String applicationPath = destPath.contains("/Contents") ? destPath.substring(0, destPath.lastIndexOf("/Contents")) : destPath;
-        logger().info("refreshApplicationIcon for: " + applicationPath);
-        Runtime runtime = Runtime.getRuntime();
-        String[] args = {"touch", applicationPath};
-        runtime.exec(args);
-      }
-      catch (IOException e) {
-        logger().warn("refreshApplicationIcon failed", e);
+      PostUpdateTasks.refreshAppBundleIcon(targetDir);
+    }
+    else if (newVersion != null) {
+      var parts = Utils.splitVersionString(newVersion);
+      if (parts.length == 2) {
+        var united = Utils.majorVersion(parts[1]) >= 253;
+        if (Utils.IS_WINDOWS) {
+          ui.startProcess(UpdaterUI.message("updating.shortcuts"));
+          ui.setProgressIndeterminate();
+          PostUpdateTasks.updateWindowsRegistry(targetDir, parts[0], parts[1], united);
+          PostUpdateTasks.updateWindowsShortcuts(targetDir, parts[0]);
+        }
+        else if (united) {
+          ui.startProcess(UpdaterUI.message("updating.shortcuts"));
+          ui.setProgressIndeterminate();
+          PostUpdateTasks.updateDesktopEntries(targetDir);
+        }
       }
     }
   }
 
   private static String resolveJarFile() {
-    URL url = Runner.class.getResource("");
+    URL url = Runner.class.getResource(Runner.class.getSimpleName() + ".class");
     if (url == null) throw new IllegalArgumentException("Cannot resolve JAR file path");
     if (!"jar".equals(url.getProtocol())) throw new IllegalArgumentException("Patch file is not a JAR file");
 
     String path = url.getPath();
 
     int start = path.indexOf("file:/");
-    int end = path.indexOf("!/");
+    int end = path.lastIndexOf("!/");
     if (start == -1 || end == -1) throw new IllegalArgumentException("Unknown protocol: " + url);
 
     String jarFileUrl = path.substring(start, end);
@@ -583,15 +630,6 @@ public class Runner {
     }
     catch (URISyntaxException e) {
       throw new IllegalArgumentException(e);
-    }
-  }
-
-  static void initTestLogger() {
-    if (logger == null) {
-      logger = new NOPLogger(new NOPLoggerRepository(), "root");
-    }
-    else if (!(logger instanceof NOPLogger)) {
-      throw new IllegalStateException("Non-test logger already defined");
     }
   }
 }
