@@ -1,49 +1,71 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.updater;
 
-import java.io.*;
-import java.nio.file.*;
+import java.io.BufferedInputStream;
+import java.io.BufferedOutputStream;
+import java.io.ByteArrayOutputStream;
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.FileNotFoundException;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
+import java.nio.file.AccessDeniedException;
+import java.nio.file.CopyOption;
+import java.nio.file.FileStore;
+import java.nio.file.FileVisitResult;
+import java.nio.file.Files;
+import java.nio.file.LinkOption;
+import java.nio.file.NoSuchFileException;
+import java.nio.file.Path;
+import java.nio.file.SimpleFileVisitor;
+import java.nio.file.StandardCopyOption;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.nio.file.attribute.DosFileAttributeView;
-import java.util.*;
+import java.util.LinkedHashSet;
+import java.util.Locale;
+import java.util.logging.Level;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipFile;
 
-public class Utils {
+import static com.intellij.updater.Runner.LOG;
+
+public final class Utils {
   private static final String OS_NAME = System.getProperty("os.name").toLowerCase(Locale.ENGLISH);
   public static final boolean IS_WINDOWS = OS_NAME.startsWith("windows");
   public static final boolean IS_MAC = OS_NAME.startsWith("mac");
 
-  private static final long REQUIRED_FREE_SPACE = 2_000_000_000L;
+  private static final long REQUIRED_FREE_SPACE = Long.getLong("idea.required.space", 2_000_000_000L);
 
   private static final int BUFFER_SIZE = 8192;  // to minimize native memory allocations for I/O operations
 
+  private static final CopyOption[] COPY_STANDARD = {LinkOption.NOFOLLOW_LINKS, StandardCopyOption.COPY_ATTRIBUTES};
+  private static final CopyOption[] COPY_REPLACE = {LinkOption.NOFOLLOW_LINKS, StandardCopyOption.COPY_ATTRIBUTES, StandardCopyOption.REPLACE_EXISTING};
+  private static final CopyOption[] MOVE_STANDARD = {LinkOption.NOFOLLOW_LINKS, StandardCopyOption.ATOMIC_MOVE};
+  private static final CopyOption[] MOVE_REPLACE = {LinkOption.NOFOLLOW_LINKS, StandardCopyOption.ATOMIC_MOVE, StandardCopyOption.REPLACE_EXISTING};
+
+  private static final boolean WIN_UNPRIVILEGED = IS_WINDOWS && Boolean.getBoolean("idea.unprivileged.process");
+
   private static File myTempDir;
 
-  public static boolean isZipFile(String fileName) {
-    return fileName.endsWith(".zip") || fileName.endsWith(".jar");
-  }
-
-  public static String findDirectory(long requiredFreeSpace) {
-    String dir = System.getProperty("idea.updater.log");
-    if (dir == null || !isValidDir(dir, requiredFreeSpace)) {
-      dir = System.getProperty("java.io.tmpdir");
-      if (!isValidDir(dir, requiredFreeSpace)) {
-        dir = System.getProperty("user.home");
-      }
-    }
-    return dir;
-  }
-
-  private static boolean isValidDir(String path, long space) {
-    File dir = new File(path);
-    return dir.isDirectory() && dir.canWrite() && dir.getUsableSpace() >= space;
-  }
-
-  public static File getTempFile(String name) throws IOException {
+  public static synchronized File getTempFile(String name) throws IOException {
     if (myTempDir == null) {
-      myTempDir = Files.createTempDirectory(Paths.get(findDirectory(REQUIRED_FREE_SPACE)), "idea.updater.files.").toFile();
-      Runner.logger().info("created a working directory: " + myTempDir);
+      String path = System.getProperty("java.io.tmpdir");
+      if (path == null) throw new IllegalArgumentException("System property `java.io.tmpdir` is not defined");
+
+      Path dir = Path.of(path);
+      if (!Files.isDirectory(dir)) throw new IOException("Not a directory: " + dir);
+
+      if (REQUIRED_FREE_SPACE > 0) {
+        FileStore fs = Files.getFileStore(dir);
+        if (fs.getUsableSpace() < REQUIRED_FREE_SPACE) {
+          throw new IOException("Not enough free space on '" + fs + "' (" + (REQUIRED_FREE_SPACE / 1_000_000) + " MB required");
+        }
+      }
+
+      myTempDir = Files.createTempDirectory(dir, "idea.updater.files.").toFile();
+      LOG.info("created a working directory: " + myTempDir);
     }
 
     File myTempFile;
@@ -55,17 +77,20 @@ public class Utils {
     return myTempFile;
   }
 
-  public static void cleanup() throws IOException {
+  public static synchronized void cleanup() throws IOException {
     if (myTempDir == null) return;
     delete(myTempDir);
-    Runner.logger().info("deleted a working directory: " + myTempDir.getPath());
+    LOG.info("deleted a working directory: " + myTempDir.getPath());
     myTempDir = null;
   }
 
   public static void delete(File file) throws IOException {
-    Path start = file.toPath();
-    if (Files.exists(start, LinkOption.NOFOLLOW_LINKS)) {
-      Files.walkFileTree(start, new SimpleFileVisitor<Path>() {
+    delete(file.toPath());
+  }
+
+  public static void delete(Path file) throws IOException {
+    if (Files.exists(file, LinkOption.NOFOLLOW_LINKS)) {
+      Files.walkFileTree(file, new SimpleFileVisitor<>() {
         @Override
         public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
           tryDelete(file);
@@ -87,11 +112,11 @@ public class Utils {
     for (int i = 0; i < 10; i++) {
       try {
         Files.delete(path);
-        Runner.logger().info("deleted: " + path);
+        LOG.info("deleted: " + path);
         return;
       }
       catch (NoSuchFileException e) {
-        Runner.logger().info("already deleted: " + path);
+        LOG.info("already deleted: " + path);
         return;
       }
       catch (AccessDeniedException e) {
@@ -119,13 +144,13 @@ public class Utils {
     return file.canExecute();
   }
 
-  public static void setExecutable(File file) throws IOException {
-    setExecutable(file, true);
+  public static void setExecutable(Path file) throws IOException {
+    setExecutable(file.toFile());
   }
 
-  public static void setExecutable(File file, boolean executable) throws IOException {
-    Runner.logger().info("Setting executable permissions for: " + file);
-    if (!file.setExecutable(executable, false)) {
+  public static void setExecutable(File file) throws IOException {
+    LOG.info("Setting executable permissions for: " + file);
+    if (!file.setExecutable(true, false)) {
       throw new IOException("Cannot set executable permissions for: " + file);
     }
   }
@@ -141,34 +166,40 @@ public class Utils {
   public static void createLink(String target, File link) throws IOException {
     Path path = link.toPath();
     Files.deleteIfExists(path);
-    Files.createSymbolicLink(path, Paths.get(target));
+    Files.createSymbolicLink(path, Path.of(target));
   }
 
   public static void copy(File from, File to, boolean overwrite) throws IOException {
-    Runner.logger().info(from + (overwrite ? " over " : " into ") + to);
+    copy(from.toPath(), to.toPath(), overwrite);
+  }
 
-    if (Files.isDirectory(from.toPath(), LinkOption.NOFOLLOW_LINKS)) {
-      Files.createDirectories(to.toPath());
+  public static void copy(Path src, Path dst, boolean overwrite) throws IOException {
+    LOG.info(src + (overwrite ? " over " : " into ") + dst);
+
+    var attrs = Files.readAttributes(src, BasicFileAttributes.class, LinkOption.NOFOLLOW_LINKS);
+    if (attrs.isDirectory()) {
+      Files.createDirectories(dst);
+    }
+    else if (WIN_UNPRIVILEGED && attrs.isSymbolicLink()) {
+      if (overwrite) Files.deleteIfExists(dst);
+      Files.createDirectories(dst.getParent());
+      Files.createSymbolicLink(dst, Files.readSymbolicLink(src));
     }
     else {
-      Files.createDirectories(to.toPath().getParent());
-      CopyOption[] options =
-        overwrite ? new CopyOption[]{LinkOption.NOFOLLOW_LINKS, StandardCopyOption.COPY_ATTRIBUTES, StandardCopyOption.REPLACE_EXISTING} :
-                    new CopyOption[]{LinkOption.NOFOLLOW_LINKS, StandardCopyOption.COPY_ATTRIBUTES};
-      Files.copy(from.toPath(), to.toPath(), options);
+      Files.createDirectories(dst.getParent());
+      Files.copy(src, dst, overwrite ? COPY_REPLACE : COPY_STANDARD);
     }
   }
 
   public static void copyDirectory(Path from, Path to) throws IOException {
-    Runner.logger().info(from + " into " + to);
+    LOG.info(from + " into " + to);
 
-    CopyOption[] options = {LinkOption.NOFOLLOW_LINKS, StandardCopyOption.COPY_ATTRIBUTES};
-    Files.walkFileTree(from, new SimpleFileVisitor<Path>() {
+    Files.walkFileTree(from, new SimpleFileVisitor<>() {
       @Override
       public FileVisitResult preVisitDirectory(Path dir, BasicFileAttributes attrs) throws IOException {
         if (dir != from || !Files.exists(to)) {
           Path copy = to.resolve(from.relativize(dir));
-          Runner.logger().info("  " + dir + " into " + copy);
+          LOG.info("  " + dir + " into " + copy);
           Files.createDirectory(copy);
         }
         return FileVisitResult.CONTINUE;
@@ -177,11 +208,26 @@ public class Utils {
       @Override
       public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
         Path copy = to.resolve(from.relativize(file));
-        Runner.logger().info("  " + file + " into " + copy);
-        Files.copy(file, copy, options);
+        LOG.info("  " + file + " into " + copy);
+        if (WIN_UNPRIVILEGED && attrs.isSymbolicLink()) {
+          Files.createSymbolicLink(copy, Files.readSymbolicLink(file));
+        }
+        else {
+          Files.copy(file, copy, COPY_STANDARD);
+        }
         return FileVisitResult.CONTINUE;
       }
     });
+  }
+
+  public static void move(Path src, Path dst, boolean overwrite) throws IOException {
+    Files.createDirectories(dst.getParent());
+    Files.move(src, dst, overwrite ? MOVE_REPLACE : MOVE_STANDARD);
+  }
+
+  public static void writeString(Path file, String data) throws IOException {
+    Files.createDirectories(file.getParent());
+    Files.writeString(file, data);
   }
 
   public static void copyFileToStream(File from, OutputStream out) throws IOException {
@@ -248,7 +294,7 @@ public class Utils {
   public static ZipEntry getZipEntry(ZipFile zipFile, String entryPath) throws IOException {
     ZipEntry entry = zipFile.getEntry(entryPath);
     if (entry == null) throw new FileNotFoundException("Entry " + entryPath + " not found");
-    Runner.logger().info("entryPath: " + entryPath);
+    LOG.info("entryPath: " + entryPath);
     return entry;
   }
 
@@ -262,11 +308,11 @@ public class Utils {
     return new BufferedInputStream(zipFile.getInputStream(entry));
   }
 
-  // always collect files and folders - to avoid cases such as IDEA-152249
+  // always collect files and folders to avoid cases such as IDEA-152249
   public static LinkedHashSet<String> collectRelativePaths(Path root) throws IOException {
     LinkedHashSet<String> result = new LinkedHashSet<>();
 
-    Files.walkFileTree(root, new SimpleFileVisitor<Path>() {
+    Files.walkFileTree(root, new SimpleFileVisitor<>() {
       @Override
       public FileVisitResult preVisitDirectory(Path dir, BasicFileAttributes attrs) {
         if (dir != root) {
@@ -285,60 +331,8 @@ public class Utils {
     return result;
   }
 
-  public static InputStream newFileInputStream(File file, boolean normalize) throws IOException {
-    return normalize && isZipFile(file.getName()) ? new NormalizedZipInputStream(file) : new FileInputStream(file);
-  }
-
-  private static final class NormalizedZipInputStream extends InputStream {
-    private final ZipFile myZip;
-    private final List<? extends ZipEntry> myEntries;
-    private InputStream myStream = null;
-    private int myNextEntry = 0;
-    private final byte[] myByte = new byte[1];
-
-    private NormalizedZipInputStream(File file) throws IOException {
-      myZip = new ZipFile(file);
-      myEntries = Collections.list(myZip.entries());
-      myEntries.sort(Comparator.comparing(ZipEntry::getName));
-      loadNextEntry();
-    }
-
-    private void loadNextEntry() throws IOException {
-      if (myStream != null) {
-        myStream.close();
-        myStream = null;
-      }
-      while (myNextEntry < myEntries.size() && myStream == null) {
-        myStream = findEntryInputStreamForEntry(myZip, myEntries.get(myNextEntry++));
-      }
-    }
-
-    @Override
-    public int read(byte[] bytes, int off, int len) throws IOException {
-      if (myStream == null) {
-        return -1;
-      }
-      int b = myStream.read(bytes, off, len);
-      if (b == -1) {
-        loadNextEntry();
-        return read(bytes, off, len);
-      }
-      return b;
-    }
-
-    @Override
-    public int read() throws IOException {
-      int b = read(myByte, 0, 1);
-      return b == -1 ? -1 : myByte[0];
-    }
-
-    @Override
-    public void close() throws IOException {
-      if (myStream != null) {
-        myStream.close();
-      }
-      myZip.close();
-    }
+  public static InputStream newFileInputStream(File file) throws IOException {
+    return new FileInputStream(file);
   }
 
   public static class OpenByteArrayOutputStream extends ByteArrayOutputStream {
@@ -352,5 +346,30 @@ public class Utils {
   public static void pause(long millis) {
     try { Thread.sleep(millis); }
     catch (InterruptedException ignore) { }
+  }
+
+  public static String[] splitVersionString(String version) {
+    var p = version.indexOf('#');
+    if (p > 0) {
+      var nameAndVersion = version.substring(0, p).trim();
+      var buildNumber = version.substring(p + 1);
+      return new String[]{nameAndVersion, buildNumber};
+    }
+    else {
+      return new String[]{version};
+    }
+  }
+
+  public static int majorVersion(String buildNumber) {
+    var p = buildNumber.indexOf('.');
+    if (p > 0) {
+      try {
+        return Integer.parseInt(buildNumber.substring(0, p));
+      }
+      catch (NumberFormatException e) {
+        LOG.log(Level.WARNING, "invalid build number: " + buildNumber, e);
+      }
+    }
+    return 0;
   }
 }
